--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1972,7 +1972,7 @@
  IRQ_decrease_sunni_satisfaction_3_TT: "Decreases £GFX_decision_secur_secur_button §HSunni Satisfaction§! by §H-3§!\n(Current Satisfaction: §H[?IRQ_sunni_satisfaction]§!)"
  IRQ_decrease_sunni_satisfaction_4_TT: "Decreases £GFX_decision_secur_secur_button §HSunni Satisfaction§! by §H-4§!\n(Current Satisfaction: §H[?IRQ_sunni_satisfaction]§!)"
  IRQ_decrease_sunni_satisfaction_5_TT: "Decreases £GFX_decision_secur_secur_button §HSunni Satisfaction§! by §H-5§!\n(Current Satisfaction: §H[?IRQ_sunni_satisfaction]§!)"
- IRQ_decrease_sunni_satisfaction_10_TT: "Decreases §HSunni Satisfaction§! by §H-10§!\n(Current Satisfaction: §H[?IRQ_sunni_satisfaction]§!)"
+ IRQ_decrease_sunni_satisfaction_10_TT: "Decreases £GFX_decision_secur_secur_button §HSunni Satisfaction§! by §H-10§!\n(Current Satisfaction: §H[?IRQ_sunni_satisfaction]§!)"
  IRQ_increase_pol_inf_1_TT: "Increases §HSunni Political Influence§! by §H1§!\n(Current Influence: §H[?IRQ_sunni_political_influence]§!)"
  IRQ_increase_pol_inf_2_TT: "Increases §HSunni Political Influence§! by §H2§!\n(Current Influence: §H[?IRQ_sunni_political_influence]§!)"
  IRQ_increase_pol_inf_3_TT: "Increases §HSunni Political Influence§! by §H3§!\n(Current Influence: §H[?IRQ_sunni_political_influence]§!)"
