--- a/localisation/simp_chinese/EP_l_simp_chinese.yml
+++ b/localisation/simp_chinese/EP_l_simp_chinese.yml
@@ -8,7 +8,7 @@
  art_equipment_loc: "火炮："
  atk_helo_equipment_loc: "攻击直升机："
  trans_helo_equipment_loc: "运输直升机："
- util_equipment_loc: "多用途车："
+ util_equipment_loc: "通用载具："
  mbt_equipment_loc: "主战坦克："
  apc_equipment_loc: "装甲人员输送车："
  ifv_equipment_loc: "步兵战车："
