--- a/localisation/simp_chinese/MD_africa_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_africa_events_l_simp_chinese.yml
@@ -566,3 +566,36 @@
  haiti.21.d1: "对抗食人军和兄弟的战斗终于结束了。随着国家以我们总统让-贝特朗·阿里斯蒂德的名义被夺回，现在形势对我们有利。警察部队在反击武装团伙时表现出了非凡的勇气。海地再次完整。"
  haiti.21.d2: "随着让-贝特朗·阿里斯蒂德的下台和博尼法斯·亚历山大就任临时总统，战争终于结束了。随着日落和冲突的结束，海地将再次迎来和平。叛军在冲突的交接处放下了武器。这是冲突的成功结束。时间将告诉我们这场冲突的后果。"
  haiti.21.a: "海地迎来新曙光"
+ central_africa.1000.t: "中非共和国丛林战争"
+ central_africa.1000.d: "中非共和国与民主统一力量联盟在该国北部爆发了小规模战斗。战斗规模相对较小，只限于小规模抵抗力量，其他反叛组织包括人民民主阵线、中非解放爱国行动小组、中非共和国正义解放者运动、中非民主阵线和抵抗力量联盟盟友，都在争夺对当地村庄和城镇的控制权。"
+ central_africa.1000.a: "共和国的战斗"
+ central_africa.1001.t: "中非共和国丛林战争升级"
+ central_africa.1001.d: "法国最近介入中非共和国，促使共和国更多民众加入各种反政府叛乱团体。随着叛乱部队联合起来组成松散联盟，推翻[CAR.GetLeader]政府，战斗已达到高潮。许多人已因战事升级而流离失所。丛林战争现已全面展开。"
+ central_africa.1001.a: "出重拳"
+ central_africa.1002.t: "中非共和国丛林战争结束"
+ central_africa.1002.d: "随着紧张的和平局面逐渐显现，丛林战争自然而然地结束了。随着乌云和雾气开始消散，叛军和政府军停止了战斗。这个饱受战争蹂躏的国家恢复了和平。"
+ central_africa.1002.a: "共和国的和平"
+ central_africa.1003.t: "中非共和国内战"
+ central_africa.1003.d: "中非共和国内战现已在塞雷卡叛军和[CAR.GetName]政府之间爆发。叛军不断指责政府违反丛林战争条约。两派之间的战斗不断升级，而中非共和国军队装备不足。"
+ central_africa.1003.a: "雨林之战。"
+ central_africa.1004.t: "中非共和国内战结束"
+ central_africa.1004.d: "中非共和国叛军与政府之间的战斗已自然结束。数百人伤亡，数千名平民流离失所。和平的曙光开始在该国大地上绽放，该国正准备迎接历史的下一个阶段。中非共和国内战已经结束。"
+ central_africa.1004.a: "和平终临……"
+ mali.34.t: "图阿雷格叛乱的胜利者"
+ mali.34.d: "图阿雷格人的叛乱自然落幕，政府与图阿雷格叛军之间的战斗基本结束，橄榄枝伸出，新现状得以恢复，年轻的马里国家又谱写了新的历史篇章。"
+ mali.34.a: "给胜利者的战利品"
+ mali.1000.t: "2006年图阿雷格叛乱"
+ mali.1000.d: "马里和[MAL.GetLeader]最近拒绝了[ALG.GetLeader]和阿尔及利亚政府外交官提出的和平协议。和平谈判失败后，图阿雷格部队立即开始集结并准备战斗，准备从基达尔大规模入侵。忠于马里政府的当地部队与集结的部队进行了反击，试图为马里军队争取时间。马里战争已经开始。"
+ mali.1000.a: "廷巴克图的麻烦......"
+ mali.1001.t: "2012年图阿雷格叛乱"
+ mali.1001.d: "阿扎瓦德民族解放运动宣布阿扎瓦德独立。[TUA.Getleader]首先发表了热情洋溢的演讲，号召基达尔地区的游牧民族和城市人民加入他的阵营，他们开始向马里发起进攻，推翻廷巴克图、基达尔、梅纳卡和加奥地区的政府。时间将告诉我们阿扎瓦德民族解放运动是否能够实现这一目标。伊斯兰势力纷纷加入阿扎瓦德民族解放运动阵营，寻求在阿扎瓦德新政府机构中占有一席之地。"
+ mali.1001.a: "廷巴克图的麻烦......"
+ mali.1002.t: "信仰卫士组织加入马里内战"
+ mali.1002.d: "信仰卫士和阿扎瓦德民族解放军之间爆发了分歧，导致马里北部被占领地区爆发大规模战斗。两派之间的战斗威胁着破坏阿扎瓦德独立运动的微妙平衡，该地区的人民正迅速成为冲突的牺牲品或目标。只要有能力，大规模的移民就会从北部迁往更稳定的南部地区。一些人称之为廷巴克图的动乱已经演变成一场风暴。马里人民现在正处于马里内战的阵痛之中。"
+ mali.1002.a: "还能更糟点吗？"
+ mali.1003.t: "图阿雷格叛乱结束"
+ mali.1003.d: "马里东北部图阿雷格人军队的有限叛乱已自然结束。双方达成协议，一方宣称战胜另一方，最近动荡的地区恢复和平。今天标志着马里图阿雷格叛乱的结束，从现在到将来，它都将永远被铭记。"
+ mali.1003.a: "基达尔的和平……"
+ mali.1004.t: "马里内战结束"
+ mali.1004.d: "尘埃落定，数千人死亡，数万人流离失所，马里内战自然落下帷幕。国内战事已基本平息，只剩下小规模的争吵和军队内部分裂派系和叛军之间的有限战斗。马里大部分地区恢复了和平，马里历史又翻开了新的篇章。"
+ mali.1004.a: "和平终临……"
