--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -193,3 +193,5 @@
  he_who_has_iron_has_bread_NAME: "有铁就有面包。"
  he_who_has_iron_has_bread_DESC: "作为共产主义法国在除警察和军队之外的所有法律上都拥有最高支出，并且欧洲所有现有国家也都是共产主义执政并且是法国的附属国。"
  ace_communist_state_are_in_power_tt: "§Y$generic.Communist-State$§!掌权"
+ chiraq_NAME: "芝拉克"
+ chiraq_DESC: "作为伊拉克控制伊利诺伊州（芝拉克）"
