--- a/localisation/simp_chinese/MD_focus_BUL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BUL_l_simp_chinese.yml
@@ -751,7 +751,7 @@
  BUL_airburst_stufff_desc: "阿森纳公司的清单中有各种各样的产品。我们必须进一步扩大它并生产指挥设备。"
  BUL_zenith_ka_desc: "防空炮是专门设计用于拦截和摧毁敌方飞机的火炮武器，在军事冲突期间提供针对空中威胁的重要防御。"
  BUL_zenith_kaa_desc: "反坦克炮是专门设计用于穿透装甲车辆的火炮，通过提供有效的防御敌方坦克和其他装甲威胁的手段，在装甲战中发挥着关键作用。"
- BUL_karanatay_vvoz_desc: "保加利亚卡车是坚固耐用的多功能车辆，以其可靠性和耐用性而闻名，擅长在充满挑战的地形中行驶并在该国的不同地形中高效运输货物。"
+ BUL_karanatay_vvoz_desc: "保加利亚卡车是坚固耐用的通用载具，以其可靠性和耐用性而闻名，擅长在充满挑战的地形中行驶并在该国的不同地形中高效运输货物。"
  BUL_expanding_arsenal_desc: "现在，我们可以开始新一轮全面扩大生产和出口。"
  BUL_NATO_cooperation_desc: "我们可以在我们的军事学说上与北约合作。这次合作对我们来说是非常有利的。"
  BUL_eu_ask_invest_desc: "也许我们应该尝试向德国人寻求投资。这可能对我们双方都有好处。"
