--- a/localisation/simp_chinese/MD_focus_CAN_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CAN_l_simp_chinese.yml
@@ -328,7 +328,7 @@
  CAN_airburst_weapons_desc: "空爆武器是一种新兴的技术，它为单个士兵提供了有效对抗隐藏在掩体后的敌人的能力。"
  CAN_vehicle_industry: "车辆平台生产"
  CAN_vehicle_industry_desc: "凭借现代汽车的专业知识，我们可以在现有的汽车生产行业能力基础上进行改进。\""
- CAN_advanced_ultility_vehicle: "先进多功能车"
+ CAN_advanced_ultility_vehicle: "先进通用载具"
  CAN_advanced_ultility_vehicle_desc: "我们的部队可以通过使用新的通用车辆，在他们移动时对他们进行保护。"
  CAN_sat_tech: "卫星技术"
  CAN_sat_tech_desc: "华为的援助可以使我们将加拿大的卫星提升到一个更新，更高的标准。"
