--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -617,7 +617,7 @@
  CES_kaz_gos_ohrana_desc: "直接隶属于哈萨克斯坦共和国总统并对其负责的特别国家机构，与哈萨克斯坦共和国国家安全部队有关，负责采取安全措施，确保哈萨克斯坦共和国总统和其他受保护人员的安全， 法律规定的权限范围内的目标。"
  CES_kaz_reog_kadet: "重组军事学校"
  CES_kaz_reog_kadet_desc: "我们的士兵应该按照最好的国际标准接受训练。"
- CES_kaz_defence_doctrine: "防御性学说"
+ CES_kaz_defence_doctrine: "防御学说"
  CES_kaz_defence_doctrine_desc: "我们的国家是和平的，但必须做好保卫自己的准备。"
  CES_kaz_sso: "特种作战部队"
  CES_kaz_sso_desc: "我们将创建我们自己的特种作战部队。"
