--- a/localisation/simp_chinese/MD_focus_COM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_COM_l_simp_chinese.yml
@@ -33,7 +33,7 @@
  comor.8.d: "我们已经准备好开始军事行动并入侵一个由叛逆的军阀控制的岛屿。"
  comor.8.a: "让我们召唤我们的正义盟友吧！"
  comor.9.t: "科摩罗请求帮助"
- comor.9.d: "科摩罗群岛呼吁我们提供援助，以对他们的一个岛屿上的叛乱军阀进行特别行动！"
+ comor.9.d: "科摩罗呼吁我们提供援助，以对他们的一个岛屿上的叛乱军阀进行特别行动！"
  comor.9.a: "当然！"
  comor.9.b: "我们并不在乎。"
  comor.10.t: "行动成功！"
@@ -46,7 +46,7 @@
  comor.11.a: "操。"
  comor.12.t: "科摩罗要求马约特！"
  comor.12.d: "马约特岛人民有权获得自由，你们殖民主义的小帝国不应该以剥削的名义让他们受苦！释放他们，或者战争！"
- comor.12.a: "试试看吧，贱货。"
+ comor.12.a: "确保稳定是我们的首要任务。"
  comor.13.t: "科摩罗-法国统一"
  comor.13.d: "科摩罗想要与我国再联合。我们应该怎么实现统一？"
  comor.13.a: "科摩罗应该带头！"
@@ -110,7 +110,7 @@
  COM_naval_treaty_with_france: "法国-科摩罗防御条约"
  COM_naval_treaty_with_france_desc: "鉴于我们共同的历史，法国干涉科摩罗事务是常见的情况。海军防御条约允许法国军队进入我们的水域，但如果我们想自己成为真正的海军强国，这可能是我们唯一的选择。"
  COM_naval_treaty_with_china: "中国-科摩罗防御条约"
- COM_naval_treaty_with_china_desc: "鉴于我们共同的历史，法国干涉罗密斯事务是常见的情况。我们必须邀请其他外国势力进入我们的地方事务，以对抗他们的影响力。"
+ COM_naval_treaty_with_china_desc: "鉴于我们共同的历史，法国干涉科摩罗事务是常见的情况。我们必须邀请其他外国势力进入我们的地方事务，以对抗他们的影响力。"
  COM_modernize_the_patrol_boats: "巡逻艇现代化"
  COM_modernize_the_patrol_boats_desc: "我国目前的“科摩罗海军”包括了2艘日本巡逻艇——它们是在1981年服役的！毋庸置疑，他们急需升级！"
  COM_buy_patrol_boats: "量大于质"
@@ -122,7 +122,7 @@
  COM_air_force: "建立一支科摩罗空军"
  COM_air_force_desc: "只有少数训练有素的科摩罗人驾驶着飞机，更不用说战斗机了！无论如何，如果我们想征服天空，我们需要一支空军。"
  COM_new_aircraft_purchases: "购买新飞机"
- COM_new_aircraft_purchases_desc: "我们现在的飞机已经严重过时了。让我们购买新千年中真正具有应用价值的型号蓝图吧。\n\n现在，瑞典人正在贿赂国家来购买他们的JAS 鹰狮，我们应该搞到其中的一些。"
+ COM_new_aircraft_purchases_desc: "我们现在的飞机已经严重过时了。让我们购买新千年中真正具有应用价值的型号蓝图吧。\n\n现在，瑞典人正在贿赂国家来购买他们的JAS鹰狮，我们应该搞到其中的一些。"
  COM_diplomacy: "科摩罗政治"
  COM_diplomacy_desc: "军事实力仅是国际政治数值的一半——我们也应该教育我们的外交官，这样我们就可以在自己的海岸之外拓展我们的势力范围。"
  COM_ideological_drift: "意识形态变化"
@@ -160,7 +160,7 @@
  COM_ghost_of_colonialism: "殖民主义幽灵"
  COM_ghost_of_colonialism_desc: "尽管我们已经独立，法国殖民者的幽灵仍然笼罩着我们的岛国，而随着法兰西对马约特的继续占领，情况不太可能很快会消失。我们该怎么处理我们曾经的领主法国？"
  COM_embrace_francafrique: "接纳法国"
- COM_embrace_francafrique_desc: "“法国非洲”是一个用来形容法国对其在非洲的旧殖民地的影响的术语。我们不认为它值得欢庆——事实上我们是欢迎并接受它。法国为我们的发展做出了巨大贡献，我们很感激它的贡献。"
+ COM_embrace_francafrique_desc: "“法国的非洲”是一个用来形容法国对其在非洲的旧殖民地的影响的术语。我们不认为它值得欢庆——事实上我们是欢迎并接受它。法国为我们的发展做出了巨大贡献，我们很感激它的贡献。"
  COM_intensify_coi_engagement: "加强同印度洋委员会的接触"
  COM_intensify_coi_engagement_desc: "印度洋委员会由五个非洲印度洋国家组成——科摩罗、马达加斯加、毛里求斯、留尼旺和塞舌尔。与印度洋委员会合作是我们证明自己是法国宝贵财富的最佳途径。"
  COM_rejoin_france: "重新加入法兰西"
@@ -184,15 +184,15 @@
  COM_expand_on_moheli: "扩展莫赫利"
  COM_expand_on_moheli_desc: "莫赫利岛是科摩罗最小的岛屿，但它的面积仍然足够大，对我们来说，在岛上建立工业部门是合理的。"
  COM_the_2001_referendum: "联邦公投"
- COM_the_2001_referendum_desc: "科摩罗各个岛屿的法律状况已经有一段时间了，因此举行了全民投票，以批准或否决宪法修正案，使科摩罗能够组成联邦。"
+ COM_the_2001_referendum_desc: "科摩罗各岛屿的法律地位一段时间以来一直不确定，因此举行全民公投来批准或否决宪法修正案，以使科摩罗能够组建联邦。"
  COM_a_federal_union: "联邦制联盟"
  COM_a_federal_union_desc: "公投成功，我们现在已经成为科摩罗联盟——一个自治度很大的岛屿联邦。"
  COM_Loi_des_competences: "宽仁之道"
  COM_Loi_des_competences_desc: "将起草权限法，以明确说明哪些治理部分由联邦政府处理，哪些部分留给岛上的自治政府。"
  COM_operation_democracy_in_comoros: "科摩罗民主行动"
- COM_operation_democracy_in_comoros_desc: "昂儒昂岛的民主运作是2008年的一场入侵，目的是将当地军阀穆罕默德·巴卡尔上校赶下台。我们得到了非洲联盟的支持并且我们的任务十分明确——巴卡尔必须下台，他的反叛政府必须被推翻！"
+ COM_operation_democracy_in_comoros_desc: "昂儒昂岛的民主运作是2008年的一场入侵，目的是将当地军阀穆罕默德·巴卡尔上校赶下台。我们得到了非洲联盟的支持并且我们的任务十分明确 - 巴卡尔必须下台，他的反叛政府必须被推翻！"
  COM_greater_interisland_cooperation: "加强两岛合作"
- COM_greater_interisland_cooperation_desc: "巴卡尔的局势已经向我们证明了自治权已经失控了——我们应该注意并促进群岛间的进一步合作。"
+ COM_greater_interisland_cooperation_desc: "巴卡尔的局势已经向我们证明了自治权已经失控了 - 我们应该注意并促进岛屿间的进一步合作。"
  COM_centralize_power: "集权"
  COM_centralize_power_desc: "考虑到最近的不稳定因素，我们决定完全无视全民公投。 只有当每个人都屈服于中央强权时，岛上不断的内斗才会停止！"
  COM_claim_banc_du_geyser: "宣称盖瑟礁"
@@ -211,7 +211,7 @@
  COM_mercs_TT: "雇佣兵将由我国政府雇佣。"
  COM_unrec_TT: "我们将邀请联合国军来强化我们的军事力量。"
  comor.2.t: "科摩罗提议成为我国的联盟国！"
- comor.2.d: "一个和我们非常亲近的国家，科摩罗，正提议把我们联合为一个政治实体。我们该怎么办？"
+ comor.2.d: "一个和我们非常亲近的国家，科摩罗，正提议把我们合并为同一个政治实体。我们该怎么办？"
  comor.2.a: "我们愿意接受。"
  comor.2.b: "也许他们愿意屈服？"
  comor.2.c: "让我们组建共主邦联吧。"
@@ -240,18 +240,18 @@
  COM_social_agenda_desc: "优先社会议程有助于增强国家里的人类发展。通过专注于教育、医疗保健和扶贫等社会问题，科摩罗可以确保其公民能够获得必要的资源和机会来领导充实的生活。而这反过来又可以促进总体福祉和人民生活质量。"
  COM_foreign_jihadists: "外国圣战者"
  COM_foreign_jihadists_desc: "当我们宣布发起圣战时，来自世界各地的圣战者将来到我们的国家，为正义的事业而战！"
- COM_dd_TT: "§Y我们可以从阿拉伯世界获得自由党盟友的军事和政治优势！§!"
+ COM_dd_TT: "§Y我们可以会从阿拉伯世界的复兴党伙伴那里获得军事和政治援助！§!"
  COM_led_new_TT: "§Y阿亚图拉·桑比斯将成为科摩罗的下任领导人，以确保岛屿间的进一步合作！§!"
  COM_militarism_baath: "复兴党私人军事公司军国主义"
  COM_militarism_baath_desc: "我们将建立一个由科摩罗组成的新国家。现在它将被我们的军队进一步控制，我们的国家将建立自己的私人军事公司。"
  COM_clearing_the_nomenlclature: "清理命名"
- COM_clearing_the_nomenlclature_desc: "清理命名应该是我们新政府的首要议题！为什么那些讨厌的西方绥靖者张开嘴在我们新的神圣政府周围闹个不停？"
+ COM_clearing_the_nomenlclature_desc: "澄清名称应该是我们新议程的首要任务！为什么那些讨厌的西方绥靖者还要张嘴在我们新的神圣政府周围制造噪音？"
  COM_nationalization_of_capital: "迁都"
- COM_nationalization_of_capital_desc: "这些投资将为西方压迫者创造收入，而我们的人民甚至连硬币都没有！让我们把他们赶出我们的土地，为我们的人民创造它。"
+ COM_nationalization_of_capital_desc: "这些投资为西方压迫者创造了收入，而我们的人民却连一分钱都拿不到！让我们把他们赶出我们的土地，为我们的人民创造财富。"
  COM_our_will_to_expand: "扩张的意志"
- COM_our_will_to_expand_desc: "我们新的社会意识形态基础明确体现了我们扩张国家的意愿。没有什么能阻碍我们前进的道路，我们应该确保这一点！"
+ COM_our_will_to_expand_desc: "我们新的社会意识形态基础是我们扩大国家意志的明确体现。没有什么可以阻挡我们，我们应该确保这一点！"
  COM_orange_party: "奥兰治党"
- COM_orange_party_desc: "奥兰治政党是科摩罗政治格局中的主要参与者。由于其进步、自由的价值观，它将很快在青少年和城市人口中获得支持。党的价值观和价值观宣言强调民主理想、促进人权和经济发展。该政党已经提出了总统和议会选举候选人。"
+ COM_orange_party_desc: "奥兰治党是科摩罗政坛上的重要政党。该党凭借其进步、自由的价值观迅速赢得了青年和城市人口的支持。该党的原则和价值观宣言强调民主理想、促进人权和经济发展。该党已提名候选人参加总统和议会选举。"
  COM_radical_stance_on_trafficking: "激进的贩卖人口活动"
  COM_radical_stance_on_trafficking_desc: "穆罕默德·达乌杜申明，科摩罗政府将加强旨在预防、镇压和惩罚贩运人口活动的行动。 这将包括重新启动政府为打击贩运人口活动而设立的小组，以及提高主要合作伙伴对贩运人口活动的认识，并重振与毒品和犯罪问题办公室的合作。"
  COM_efficient_governmental_apparatus: "高效的政府机构"
@@ -284,14 +284,15 @@
  comor.16.b: "让我们帮助他们偿还债务。"
  comor.16.c: "科摩罗？再见。"
  comor.17.t: "他们接受了我们的提议！"
- comor.17.d: "我们的大使已经成功地说服外国投资者投资于我们的经济。他们将要建立一家工厂！"
+ comor.17.d: "我们的大使成功说服外国投资者投资我国经济。他们要建一座工厂！"
  comor.17.a: "棒极了。"
  comor.18.t: "他们接受了我们的提议！"
- comor.18.d: "我们的大使已经成功地说服外国投资者投资于我们的经济。他们将帮助我们偿还债务！"
+ comor.18.d: "我们的大使成功说服外国投资者投资我们的经济。他们将帮助我们解决债务问题！"
  comor.18.a: "很好。"
  comor.19.t: "他们拒绝了我们的提议！"
- comor.19.d: "我们的大使并未成功说服外国投资者投资我们的经济。他们没有兴趣投资我们。"
+ comor.19.d: "我们的大使未能成功说服外国投资者投资我们的经济。他们对投资我们没兴趣。"
  comor.19.a: "啧"
- com_join_fra_TT: "我们很有可能加入法国同盟或是互相附庸/吞并。"
+ com_join_fra_TT: "我们很可能会加入法国联盟或互相傀儡/吞并。"
  island_warlord: "岛屿军阀"
  COM_export_vanil: "香草出口"
+ comor.12.b: "试试看吧，混蛋。"
