--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -2823,7 +2823,7 @@
  european_council_voting_members: "§G投票成员国§!"
  european_council_voting_members_tt: "§C[EUU.GetNameWithFlag]§!当前成员国列表，他们可以对向欧洲理事会提出的新措施进行投票。"
  european_council_header_tt: "§C[EUU.GetNameWithFlag]§!的立法过程\n--------------\n§C[EUU.GetNameWithFlag]§!目前已通过的法律法案。\n\n欧盟理事会采用合格多数投票，通常称为双重多数。它需要55%的§C成员国§!和65%§C成员国§!包含的欧盟人口。"
- active_agenda_header: "当前活动议程："
+ active_agenda_header: "§Y当前活动议程§!"
  list_of_available_laws_header: "§H可用的欧盟改革§!"
  system_of_eu_values_text: "§Y欧洲价值观§!"
  system_of_eu_values_tt: "欧洲价值观体系：\n欧盟价值观：\n违规问题 - 违规程度\n\n法律规则：\n瘫痪性腐败 - 5\n严重腐败 - 4\n猖獗腐败 - 3\n无节制的腐败 - 2\n系统性腐败 - 1\n\n尊重人的尊严和自由：\n与欧盟成员国发生进攻性战争 - 10\n有共产主义政府 - 2\n有反动主义政府 - 2\n有共产主义政党加入执政联盟 - 1\n有反动主义政党加入执政联盟 - 1\n\n民主：\n没有选举 - 5\n独裁 - 5\n共产主义独裁 - 5\n法西斯独裁 - 5\n为傀儡国 - 4\n新帝国主义 - 1\n\n妇女和少数群体权利：\n禁止女性服役 - 1\n选举门槛10% - 1\n\n无救助条款：\n破产 - 1\n给予救助 - 1"
@@ -3081,7 +3081,7 @@
  EU_approve_ipa: "加入前援助工具"
  EU_supporting: "支持："
  EU_rejecting: "否决："
- EU_current_active_measure: "当前活动措施"
+ EU_current_active_measure: "§Y当前活动措施§!"
  EU_global_rate_text: "全局利率"
  EU_global_expenses_text: "全局费用"
  EU_administration_expenses_text: "行政费用"
