--- a/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
@@ -578,11 +578,11 @@
  GEO_israel_guns: "以色列军火"
  GEO_israel_guns_desc: "我们的军队需要壮大，为此，我们将从以色列购买武器。"
  GEO_volf: "伏尔夫"
- GEO_volf_desc: "我们的朋友以色列向我们出售多功能车。"
+ GEO_volf_desc: "我们的朋友以色列向我们出售通用载具。"
  GEO_gi4: "GI4"
  GEO_gi4_desc: "GI4 - 是我们新提出的在格鲁吉亚开发国产步枪的项目。"
  GEO_lynx: "山猫"
- GEO_lynx_desc: "我们需要壮大我们的军队！为此，我们将从德国购买多功能车"
+ GEO_lynx_desc: "我们需要壮大我们的军队！为此，我们将从德国购买通用载具。"
  GEO_maxx: "马克思"
  GEO_maxx_desc: "我们的军队越来越强了，买吧，我们总能买到更多的武器！"
  GEO_afghan_train: "阿富汗战争经验"
@@ -596,15 +596,15 @@
  GEO_fgm148: "FGM148"
  GEO_fgm148_desc: "美国要再次帮助我们，现在我们要买反坦克导弹。"
  GEO_ejder: "龙"
- GEO_ejder_desc: "现在，土耳其将帮助我们，我们正在从他们那里购买多功能车。"
+ GEO_ejder_desc: "现在，土耳其将帮助我们，我们正在从他们那里购买通用载具。"
  GEO_oktobar: "十月"
- GEO_oktobar_desc: "土耳其想再次帮助我们，现在，我们正在从他们那里购买更多的多功能车。"
+ GEO_oktobar_desc: "土耳其想再次帮助我们，现在，我们正在从他们那里购买更多的通用载具。"
  GEO_rm70: "Rm70"
  GEO_rm70_desc: "捷克将向我们出售防空导弹。"
  GEO_vz77: "Vz77"
  GEO_vz77_desc: "捷克将向我们出售更多武器，现在我们从他们那里购买大炮。"
  GEO_didgori: "迪德格里"
- GEO_didgori_desc: "我们的研究速度增长很快，现在我们正在提高多功能车的研究速度。"
+ GEO_didgori_desc: "我们的研究速度增长很快，现在我们正在提高通用载具的研究速度。"
  GEO_zcrs: "兹沙尔"
  GEO_zcrs_desc: "我们将从美国购买自行火炮"
  GEO_lazika: "拉兹卡"
@@ -629,7 +629,7 @@
  GEO_modif_t72_desc: "乌克兰向我们出售了更多他们改装的 T72。"
  GEO_help_from_usa_mil: "美国军事合作"
  GEO_help_from_usa_mil_desc: "美国向我们出售反坦克武器"
- GEO_humvee: "美国向我们出售多用途车辆"
+ GEO_humvee: "美国向我们出售通用载具"
  GEO_clear_from_old_guard: "清除旧守卫"
  GEO_clear_from_old_guard_desc: "时间让我军获得一些经验。"
  GEO_mvd_min_oboron: "联合MVD与国防部"
