--- a/localisation/simp_chinese/MD_focus_HOU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_HOU_l_simp_chinese.yml
@@ -55,7 +55,7 @@
  HOU_Attack_the_PLO: "攻击巴勒斯坦解放组织"
  HOU_Promote_Hamas: "影响哈马斯"
  HOU_Arm_Hamas: "武装哈马斯"
- HOU_Fund_the_PIJ: "资助伊斯兰正义党"
+ HOU_Fund_the_PIJ: "资助巴勒斯坦伊斯兰圣战运动 "
  HOU_Sheikh_Yassin_And_Al_Houthi: "卡桑旅"
  HOU_Bring_Hamas_in_Power_in_Gaza: "让哈马斯掌权"
  HOU_Palestine: "巴勒斯坦"
