--- a/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
@@ -655,7 +655,7 @@
  SPR_fabricacion_espanola: "西班牙制造业"
  SPR_fabricacion_espanola_desc: "依赖其他国家的补给和货物必将毁灭我们的国家。将我们的重心转移到国内生产可以帮助西班牙经济独立和发展，我们可以通过资助研究和计划来支持这一举措。"
  SPR_urovesa: "乌罗维萨"
- SPR_urovesa_desc: "乌罗维萨是一家位于加利西亚的西班牙重型汽车制造商。它以生产类似悍马的四轮驱动汽车瓦曼塔和乌罗卡车而闻名。它由一群IPV前员工于20世纪80年代初创立。自1984年以来，他们已成为西班牙陆军的官方供应商，为他们提供卡车和其他多用途车辆。"
+ SPR_urovesa_desc: "乌罗维萨是一家位于加利西亚的西班牙重型汽车制造商。它以生产类似悍马的四轮驱动汽车瓦曼塔和乌罗卡车而闻名。它由一群IPV前员工于20世纪80年代初创立。自1984年以来，他们已成为西班牙陆军的官方供应商，为他们提供卡车和其他通用载具。"
  SPR_grupo_antolin: "格鲁波-安托林"
  SPR_grupo_antolin_desc: "安通林集团最初是布尔戈斯的汽车和农业机械修理厂。如今，该集团是一家大型汽车内饰生产商和全球车顶内衬基材供应商。他们还为西班牙军方也利用的各种车辆内部零件提供技术研究。"
  SPR_seat: "西亚特"
