--- a/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
@@ -53,8 +53,8 @@
  RULE_OPTION_REPUBLICAN_AI_DESC: "美国将寻求选举共和党领导层，并在现代意义上保持国家朝着中右翼统治国家的方向发展。"
  RULE_OPTION_REFORMED_REPUBLIC: "改革后的共和"
  RULE_OPTION_REFORMED_REPUBLIC_AI_DESC: "人民的意愿已经得到倾听。政治压力和公众的强烈抗议导致了关键的政治和经济改革，以使第三党能够更好地代表和发声。现在由人民选出一个代表他们的政党。"
- RULE_OPTION_POST_UNITED: "后合众国"
- RULE_OPTION_POST_UNITED_AI_DESC: "永远的美式和平！！！"
+ RULE_OPTION_POST_UNITED: "后合众国时期"
+ RULE_OPTION_POST_UNITED_AI_DESC: "老鹰的陨落远不止是失宠。§R不要启用AI史实路线§!"
  NIG_AI_BEHAVIOR: "@NIG 尼日利亚联邦共和国"
  RULE_OPTION_RISE_OF_BOKO_HARAM: "博科圣地组织的崛起"
  RULE_OPTION_RISE_OF_BOKO_HARAM_AI_DESC: "迫使尼日利亚允许博科圣地组织控制全国。"
@@ -570,3 +570,6 @@
  RULE_OPTION_GER_SOCIALIST_DESC: "德国将努力走社会主义路线。"
  RULE_OPTION_GER_MONARCHIST: "君主主义"
  RULE_OPTION_GER_MONARCHIST_DESC: "德国将努力走君主主义路线。"
+ RULE_PER_ZOROASTRIAN_STATE: "祆教复兴"
+ RULE_PER_ZOROASTRIAN_STATE_ALLOWED_DESC: "在琐罗亚斯德教时期可能是一个可玩的派系"
+ RULE_PER_ZOROASTRIAN_STATE_BLOCKED_DESC: "琐罗亚斯德教徒将不会产生"
