--- a/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
@@ -410,3 +410,7 @@
  VEVAK_intel_display_tt: "$MODIFIER_DECRYPTION_FACTOR$: [?THIS.VEVAK_decryption_factor_var|+%]\n$MODIFIER_ENCRYPTION_FACTOR$: [?THIS.VEVAK_encryption_factor_var|+%]\n"
  ISI_intel_display_lar_tt: "$MODIFIER_CIVILIAN_INTEL_FACTOR$: [?THIS.ISI_civilian_intel_factor_var|+%]\n$MODIFIER_ARMY_INTEL_FACTOR$: [?THIS.ISI_army_intel_factor_var|+%]\n$MODIFIER_NAVY_INTEL_FACTOR$: [?THIS.ISI_navy_intel_factor_var|+%]\n$MODIFIER_AIRFORCE_INTEL_FACTOR$: [?THIS.ISI_airforce_intel_factor_var|+%]\n"
  ISI_intel_display_tt: "$MODIFIER_DECRYPTION_FACTOR$：[?THIS.ISI_decryption_factor_var|+%]\n$MODIFIER_ENCRYPTION_FACTOR$：[?THIS.ISI_encryption_factor_var|+%]\n"
+ IRQ_oligarchs: "[IRQ.GetAdjective]窃盗统治"
+ IRQ_the_military: "[IRQ.GetAdjective]武装力量"
+ IRQ_intelligence_community: "穆卡巴拉"
+ IRQ_labour_unions: "联邦总公会"
