--- a/localisation/simp_chinese/MD_opinion_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_opinion_modifiers_l_simp_chinese.yml
@@ -451,3 +451,4 @@
  bad_revoult: "政变失败"
  territorial_integrity_violation: "破坏领土完整"
  recently_invest: "最近对我们进行投资"
+ recent_actions_very_positive: "近期非常积极的行动"
