--- a/localisation/simp_chinese/MD_units_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_units_l_simp_chinese.yml
@@ -41,7 +41,7 @@
  L_Marine_Bat: "轻型海军陆战队"
  L_Marine_Bat_desc: "轻型海军陆战队步兵是精锐步兵，接受过两栖作战的特殊训练，如渡河、沼泽作战和两栖入侵。不过他们没有车辆，携带重型设备的能力受到严格限制。"
  Mot_Marine_Bat: "摩托化海军陆战队"
- Mot_Marine_Bat_desc: "摩托化装甲海军陆战队步兵是精锐步兵，接受过两栖作战的特殊训练，如渡河、沼泽作战和两栖入侵。他们下船时是轻步兵，但拥有多功能车作为陆地运输工具，这给予了他们极大的机动性，并允许他们携带大量重型装备进入战斗。"
+ Mot_Marine_Bat_desc: "摩托化装甲海军陆战队步兵是精锐步兵，接受过两栖作战的特殊训练，如渡河、沼泽作战和两栖入侵。他们下船时是轻步兵，但拥有通用载具作为陆地运输工具，这给予了他们极大的机动性，并允许他们携带大量重型装备进入战斗。"
  Mech_Marine_Bat: "机械化海军陆战队"
  Mech_Marine_Bat_desc: "机械化装甲海军陆战队步兵是精锐步兵，接受过两栖作战的特殊训练，如渡河、沼泽作战和两栖入侵。他们在特殊设计的两栖装甲人员运输车保护下登陆，他们的装备非常好，可以携带大量的重型装备投入战斗。"
  Arm_Marine_Bat: "装甲海军陆战队"
