--- a/localisation/simp_chinese/attack_helicopter_modules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/attack_helicopter_modules_l_simp_chinese.yml
@@ -99,7 +99,7 @@
  helicopter_medium_nose_gun_gen1: "第1代20毫米机头机枪"
  helicopter_medium_nose_gun_gen1_desc: "第1代机头安装的 20 毫米火炮是对现有飞机机炮的改造。 它们是手动瞄准的，缺乏先进的瞄准系统。 这些火炮提供压制火力和有限的反装甲能力。 他们的简单设计侧重于在直升机重量和空间限制的范围内最大化火力。 弹药容量有限，后坐力管理也因直升机固有的不稳定性而受到限制。\n\n§G设计师提示：中型机头机枪提供了反装甲和反步兵能力的平衡§!"
  helicopter_medium_nose_gun_gen2: "第2代20毫米机头机枪"
- helicopter_medium_nose_gun_gen2_desc: "第2代机头20毫米火炮在瞄准、火控和弹药类型方面取得了进步。 稳定平台的集成，例如陀螺仪稳定炮塔和光电瞄准系统，可以实现更准确和多功能的交战。 这些系统补偿了直升机的运动，保证了机动过程中的准确性。 弹药选项现在包括穿甲弹和爆炸弹，增强了该枪的性能。 改进的后坐力缓解系统也减少了射击对直升机稳定性的影响。\n\n§G设计师提示：中型机头机枪提供了反装甲和反步兵能力的平衡§!"
+ helicopter_medium_nose_gun_gen2_desc: "第2代机头20毫米火炮在瞄准、火控和弹药类型方面取得了进步。 稳定平台的集成，例如陀螺仪稳定炮塔和光电瞄准系统，可以实现更准确和多功能的交战。 这些系统补偿了直升机的运动，保证了机动过程中的准确性。 弹药选项现在包括穿甲弹和爆炸弹，增强了该枪的性能。 改进的后坐力缓解系统也减少了射击对直升机稳定性的影响。\n\n§G设计师提示：中型机头火炮提供了反装甲和反步兵能力的平衡§!"
  helicopter_medium_nose_gun_gen3: "第3代20毫米机头机枪"
  helicopter_medium_nose_gun_gen3_desc: "第3代机头安装的 20 毫米火炮包括更先进的火控系统、轻型弹药和半自主瞄准，具有人工智能驱动的瞄准和预测射击解决方案，以及采用材料科学最新进展的弹药。\n\n§G设计师提示：中型机头机枪提供了反装甲和反步兵能力的平衡§!"
  helicopter_heavy_nose_gun_gen1: "第1代30毫米机鼻航炮"
@@ -171,3 +171,7 @@
  em_lock_detection_system_gen3: "第3代电子锁定报警系统"
  em_lock_detection_system_gen3_desc: ""
  sensors_and_avionics_gen_5_desc: "我们现在正在将AI集成到系统中，分析来自雷达、前视红外系统、光学雷达等各种传感器的海量数据，以提供一个全面和准确的战场画面。"
+ transport_helo_engine_upgrade: "引擎"
+ transport_helo_gun_upgrade: "机门机枪"
+ transport_helo_countermeasure_upgrade: "防御措施"
+ transport_helo_reliablity_upgrade: "可靠性"
