--- a/localisation/simp_chinese/factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/factions_l_simp_chinese.yml
@@ -183,3 +183,11 @@
  REP_member: "红色欧洲条约成员国"
  polish_pact: "红色欧洲条约"
  UAR_arab_liberation_front: "阿拉伯解放阵线"
+ fao_alliance: "反压迫阵线"
+ faction_fao_alliance: "反压迫阵线成员国"
+ faction_fao_alliance_desc: "该国是反压迫阵线联盟的成员，该联盟的主要目标是击败西方（他们认为西方是压迫者）在中东地区的影响力和存在。他们还寻求将穆斯林国家团结在一个联盟之下，与世界强国抗衡。"
+ faction_fao_TT: "§R阵营特殊规则§!：\n- 只有什叶派国家才允许加入该阵营\n- 成员国只能在防御性战争中被召唤"
+ faction_fao_alliance_call_ally_rule_tt: "§R反压迫阵线成员国只有在防御战中才能号召盟友！§!"
+ faction_fao_alliance_join_ally_rule_tt: "§R反压迫阵线成员国只能加入盟友的防御性战争！§!"
+ faction_fao_alliance_join_faction_rule_tt: "§R!§!"
+ faction_fao_alliance_offer_join_faction_rule_tt: "§R只有什叶派国家可以加入反压迫阵线！§!"
