--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -2149,3 +2149,5 @@
  foreign_influence_home_continent_modifier: "£foreign_influence_modifier_texticon 本土大陆§Y外国影响力§!"
  foreign_influence_monthly_domestic_independence_gain_modifier: "£foreign_influence_modifier_texticon 每月§Y国家独立性§!获取"
  foreign_influence_monthly_domestic_independence_gain_factor: "£foreign_influence_modifier_texticon 每月§Y国家独立性§!获取系数"
+ international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon §Y国际市场收入§!修正"
+ international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon §Y国际市场采购§!修正"
