--- a/localisation/simp_chinese/tactics_l_simp_chinese.yml
+++ b/localisation/simp_chinese/tactics_l_simp_chinese.yml
@@ -82,3 +82,42 @@
  tactic_city_all_round_defense: "城市360度防御"
  tactic_city_crossfire_defense: "城市交火防御"
  city_attack_movement: "城市攻击开始"
+ thunder_run: "雷霆突击"
+ deep_battle: "纵深战斗"
+ insurgency: "叛乱"
+ tactic_recon_insurgency_attack: "叛乱分子进攻侦察"
+ tactic_recon_insurgency_defender: "叛乱分子防御侦察"
+ tactic_insurgency_attacker: "叛乱进攻"
+ tactic_insurgency_defender: "叛乱防御"
+ tactic_flexible_lines: "灵活战线"
+ tactic_dedicated_emplacements: "专用炮台"
+ tactic_thunder_run: "雷霆突击"
+ tactic_thunder_run_push: "积极推进"
+ tactic_thunder_run_maneuver: "积极机动"
+ tactic_thunder_run_retreat: "防守突破"
+ tactic_thunder_run_delay: "迟滞行动"
+ tactic_deep_battle_push: "突破推进"
+ tactic_deep_battle_assault: "装甲突击"
+ tactic_deep_battle_encirclement: "深度打击"
+ tactic_deep_battle_rush: "机械化突进"
+ tactic_deep_battle_retreat: "切断联系"
+ tactic_deep_battle_hold: "迟滞行动"
+ tactic_deep_battle_counter_attack: "反恐怖"
+ tactic_insurgent_ied_strike: "爆炸袭击"
+ tactic_insurgent_vbied: "车载爆炸袭击"
+ tactic_insurgent_raid: "突袭战术"
+ tactic_insurgent_terror_strike: "恐怖袭击"
+ tactic_insurgent_base_attack: "前进作战基地袭击"
+ tactic_insurgent_tunnel_strike: "隧道突袭"
+ tactic_insurgent_tunnel_hiding: "藏身隧道"
+ tactic_insurgent_urban_hideouts: "城市藏身处"
+ tactic_insurgent_sniper_ops: "狙击行动"
+ tactic_insurgent_convoy_ambush: "伏击运输船"
+ tactic_counter_ied: "反爆炸装置行动"
+ tactic_counter_foot_patrols: "在地巡逻"
+ tactic_counter_stronghold_raid: "壁垒突袭"
+ tactic_counter_cordon_search: "封锁并搜查"
+ tactic_counter_react_to_contact: "对联系作出反应"
+ tactic_counter_fireforce: "火力部队"
+ tactic_counter_perimeter_defence: "边境防御"
+ tactic_counter_tunnel_rats: "隧道鼠战"
