--- a/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
@@ -3537,3 +3537,21 @@
  PMR_rusempire_nationalist: "俄罗斯"
  PMR_rusempire_nationalist_DEF: "俄罗斯"
  PMR_rusempire_nationalist_ADJ: "俄罗斯"
+ PER_Zoroastrian_Flag: "琐罗亚斯德教团结运动"
+ PER_Zoroastrian_Flag_DEF: "亚兹德地下军"
+ PER_Zoroastrian_Flag_ADJ: "伊朗"
+ PER_Zoroastrian_state_Flag: "伊朗"
+ PER_Zoroastrian_state_Flag_DEF: "伊朗"
+ PER_Zoroastrian_State_Flag_ADJ: "伊朗"
+ PER_Zoroastrian_Empire_Flag: "伊朗沙赫尔"
+ PER_Zoroastrian_Empire_Flag_DEF: "伊朗沙赫尔"
+ PER_Zoroastrian_Empire_Flag_ADJ: "伊朗"
+ IRQ_sunni_revolt_name: "伊拉克自由阵线"
+ IRQ_sunni_revolt_name_DEF: "伊拉克自由阵线"
+ IRQ_sunni_revolt_name_ADJ: "伊拉克"
+ IRQ_shia_revolt: "马赫迪军"
+ IRQ_shia_revolt_DEF: "马赫迪军"
+ IRQ_shia_revolt_ADJ: "伊拉克"
+ IRQ_badr_revolt: "巴德尔组织"
+ IRQ_badr_revolt_DEF: "巴德尔组织"
+ IRQ_badr_revolt_ADJ: "伊拉克"
