--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -1839,8 +1839,8 @@
  ITA_specialize_dardo_spirit_loc_2: "§Y步兵战车§!生产成本：§R+15%§!\n§Y步兵战车§!突破：§G+15%§!\n§Y步兵战车§!防御：§G+15%§!"
  ITA_specialize_centauro_spirit_loc_1: "§Y侦察坦克§!生产花费：§G-15%§!\n§Y侦察坦克§!可靠性：§R-7.5%§!"
  ITA_specialize_centauro_spirit_loc_2: "§Y侦查坦克§!生产花费：§R+15%§!\n§Y侦查坦克§!对装甲杀伤：§G+15%§!\n§Y侦查坦克§!穿甲：§G+15%§!"
- ITA_specialize_lince_spirit_loc_1: "§Y多用途车§!生产花费：§G-15%§!\n§Y多用途车§!可靠性：§R-7.5%§!"
- ITA_specialize_lince_spirit_loc_2: "§Y多用途车§!生产花费：§R+15%§!\n§Y多用途车§!最大速度：§G+10%§!\n§Y多用途车§!防护：§G+20%§!"
+ ITA_specialize_lince_spirit_loc_1: "§Y通用载具§!生产花费：§G-15%§!\n§Y通用载具§!可靠性：§R-7.5%§!"
+ ITA_specialize_lince_spirit_loc_2: "§Y通用载具§!生产花费：§R+15%§!\n§Y通用载具§!最大速度：§G+10%§!\n§Y通用载具§!防护：§G+20%§!"
  ITA_specialize_arx_spirit_loc_1: "§Y轻武器§! 生产花费：§G-15%§!\n§Y轻武器§! 可靠性：§R-7.5%§!"
  ITA_specialize_arx_spirit_loc_2: "§Y轻武器§!  生产花费：§R+15%§!\n§Y轻武器§!  对人员杀伤：§G+15%§!\n§Y轻武器§!  防御:：§G+15%§!"
  ITA_specialize_siaccon_spirit_loc_1: "§YC&C设备§!生产花费：§G-15%§!\n§YC&C设备§!可靠性：§R-7.5%§!"
@@ -1854,7 +1854,7 @@
  ITA_specialize_semovente_spirit_loc_1: "§Y自行火炮§! 生产花费：§G-15%§!\n§Y自行火炮§!可靠性：§R-7.5%§!"
  ITA_specialize_semovente_spirit_loc_2: "§Y自行火炮§! 生产花费：§R+15%§!\n§Y自行火炮§! 对人员杀伤：§G+30%§!"
  ITA_specialize_logistics_spirit_loc_1: "§Y运输机§!生产花费：§G-10%§!\n§Y运输直升机§!生产花费：§G-10%§!"
- ITA_specialize_logistics_spirit_loc_2: "§Y民用火车§!生产花费：§G-10%§!\n§Y多用途车§!生产花费：§G-10%§!"
+ ITA_specialize_logistics_spirit_loc_2: "§Y民用火车§!生产花费：§G-10%§!\n§Y通用载具§!生产花费：§G-10%§!"
  modify_additional_expenses_effect_TT: "这将修改我们的每周开支：[?additional_expenses_change|-]B\n"
  modify_nimby_modifier_effect_TT: "这将改变邻避综合征的效果：[?nimby_culture_change|%+]\n"
  modify_tax_gain_multiplier_modifier_effect_TT: "§Y税收收入乘数§!：[?ITA_tax_gain_multiplier_modifier_change|%+]\n"
