--- a/localisation/simp_chinese/MD_focus_LIC_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_LIC_l_simp_chinese.yml
@@ -162,8 +162,8 @@
  LIC_invest_ifv_desc: "装步战斗车对任何现代军队来说都是一个极大的补充，它既拥有适当的火力，同时也可以用来运输一个步兵班。"
  LIC_invest_MBT: "投资主战坦克"
  LIC_invest_MBT_desc: "豹2是一种传奇战车，来自一个以生产传奇战车而闻名的国家，当我们为我们的国家购买一辆新战车时，豹2是肯定的选择。"
- LIC_invest_utility: "投资多用途车"
- LIC_invest_utility_desc: "任何军队的多用途车都是由许多不同的分支组成的，无论是用于侦察的轻型吉普车，还是工程师配备的重型机械。目前我们的大部分装置都是从德国购买的，所以我们肯定会得到一个不错的交易。"
+ LIC_invest_utility: "投资通用载具"
+ LIC_invest_utility_desc: "任何军队的通用载具都是由许多不同的分支组成的，无论是用于侦察的轻型吉普车，还是工程师配备的重型机械。目前我们的大部分装置都是从德国购买的，所以我们肯定会得到一个不错的交易。"
  LIC_invest_sp_arty: "投资火炮"
  LIC_invest_sp_arty_desc: "自二战前以来，任何现代军队都严重依赖于火炮的支援，我们的军队也将需要火炮。"
  LIC_international_banking: "国际银行业务"
