--- a/localisation/simp_chinese/MD_focus_MLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_MLR_l_simp_chinese.yml
@@ -27,7 +27,7 @@
  MLR_ter_defence_desc: "我们将在地方民兵中选拔成立一支国土防卫队。"
  MLR_contract_army: "合同制军队"
  MLR_contract_army_desc: "我们的军队将根据合同制度组建。"
- MLR_defence_doctrine: "防御性学说"
+ MLR_defence_doctrine: "防御学说"
  MLR_defence_doctrine_desc: "我们不攻击任何人，我们的任务是保卫我们的边境。我们的军队将采用防御性的军事学说。"
  MLR_nat_guard: "小俄罗斯国民警卫队"
  MLR_nat_guard_desc: "在上世纪 90 年代，乌克兰就曾有过一支国民警卫队。我们将重新创建这支部队，但由我们指挥。"
