--- a/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
@@ -8,7 +8,6 @@
  TUR_new_mili_rd: "新式军用技术"
  TUR_digitalize: "数字化"
  TUR_modernize_armed_forces: "现代武装力量"
- CAT_genes: "基因工程技术"
  ALB_taken_research: "进行的研究"
  TUR_PKK_autonomy_idea: "库尔德工人党的抵抗"
  TUR_PKK_autonomy_idea_desc: "将库尔德工人党并入另一个国家几乎是不可能的。"
@@ -2247,3 +2246,4 @@
  Turkey.100.c: "当前的执政党还行吧"
  TUR_ottomans_time: "我们可以让§H奥斯曼皇室§!掌权，并且启用此国策树。"
  TUR_appease_PKK: "安抚库尔德工人党"
+ CAT_genes: "遗传工程技术"
