--- a/localisation/simp_chinese/MD_new_unit_categories_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_new_unit_categories_l_simp_chinese.yml
@@ -16,3 +16,8 @@
  category_inf_aslt: "轻装空中突击步兵"
  category_arm_aslt: "空中突击机械化与装甲"
  category_atk_helo: "攻击直升机单位"
+ category_real_tanks: "主战坦克"
+ category_asg: "轻型坦克/突击炮"
+ category_spart: "自行火炮"
+ category_mot_inf: "摩托化步兵"
+ category_foot_inf: "徒步步兵"
