--- a/localisation/simp_chinese/countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/countries_l_simp_chinese.yml
@@ -1952,7 +1952,6 @@
  USA_fascism_DEF: "伊斯兰国"
  USA_democratic: "美国"
  USA_democratic_DEF: "美国"
- USA_FreeStates_democratic: "美国"
  USA_neutrality: "美国"
  USA_neutrality_DEF: "美国"
  USA_communism: "美国"
@@ -1964,8 +1963,8 @@
  USA_nationalist: "美国"
  USA_nationalist_DEF: "美国"
  USA_nationalist_ADJ: "美国"
- CSA_fascism: "美利坚南方共和国"
- CSA_fascism_DEF: "美利坚南方共和国"
+ CSA_fascism: "美利坚联盟哈里发国"
+ CSA_fascism_DEF: "美利坚联盟哈里发国"
  CSA_democratic: "美利坚南方共和国"
  CSA_democratic_DEF: "美利坚南方共和国"
  CSA_neutrality: "美利坚南方共和国"
@@ -5436,3 +5435,40 @@
  LAG_nationalist: "拉特加尔"
  LAG_nationalist_DEF: "拉特加尔"
  LAG_nationalist_ADJ: "拉特加尔"
+ USA_free_american_territories: "美利坚自由领地"
+ USB_fascism: "伊斯兰联盟"
+ USB_fascism_DEF: "大西洋中部伊斯兰哈里发国"
+ USB_democratic: "美利坚自由邦"
+ USB_democratic_DEF: "美利坚自由邦"
+ USB_neutrality: "美利坚自由邦"
+ USB_neutrality_DEF: "美利坚自由邦"
+ USB_communism: "美利坚自由邦"
+ USB_communism_DEF: "美利坚自由邦"
+ USB_fascism_ADJ: "自由州"
+ USB_democratic_ADJ: "自由州"
+ USB_neutrality_ADJ: "自由州"
+ USB_communism_ADJ: "自由州"
+ USB_nationalist: "美利坚自由邦"
+ USB_nationalist_DEF: "美利坚自由邦"
+ USB_nationalist_ADJ: "自由州"
+ USB_FreeStates_democratic: "美利坚自由邦"
+ USB_Arcadia: "阿卡迪亚统一王国"
+ USB_MidAtlantic_States: "中大西洋联邦联盟"
+ USB_MidAtlantic_Union: "中大西洋军事联盟"
+ USB_second_american_republic: "美利坚第二共和国"
+ USB_UFSR: "自由苏维埃社会主义共和国联盟"
+ ARC_fascism: "阿卡迪亚哈里发国"
+ ARC_fascism_DEF: "阿卡迪亚哈里发国"
+ ARC_democratic: "阿卡迪亚"
+ ARC_democratic_DEF: "阿卡迪亚共和国"
+ ARC_neutrality: "阿卡迪亚"
+ ARC_neutrality_DEF: "阿卡迪亚共和国"
+ ARC_nationalist: "阿卡迪亚"
+ ARC_nationalist_DEF: "阿卡迪亚共和国"
+ ARC_communism: "阿卡迪亚"
+ ARC_communism_DEF: "阿卡迪亚共和国"
+ ARC_fascism_ADJ: "阿卡迪亚"
+ ARC_democratic_ADJ: "阿卡迪亚"
+ ARC_neutrality_ADJ: "阿卡迪亚"
+ ARC_communism_ADJ: "阿卡迪亚"
+ ARC_nationalist_ADJ: "阿卡迪亚"
