--- a/localisation/simp_chinese/focus_l_simp_chinese.yml
+++ b/localisation/simp_chinese/focus_l_simp_chinese.yml
@@ -50,3 +50,9 @@
  continuous_bread_and_circuses_desc: "如果我们对我们的员工和稳定性进行再投资，我们就能看到我们员工的生产力得到提高。"
  continuous_family_planning: "家庭计划"
  continuous_family_planning_desc: "为年轻家庭提供计划生育以增加我国人口数量总是有可能的。"
+ continuous_foreign_investments: "鼓励外商投资"
+ continuous_foreign_investments_desc: "我们迫切需要外国投资来帮助刺激我们的经济。"
+ continuous_temporary_agents: "临时情报人员"
+ continuous_temporary_agents_desc: "我们应该鼓励我们的情报机构招募更多的特工。"
+ continuous_nuclear_energy_investments: "核能投资"
+ continuous_nuclear_energy_investments_desc: "投资我们的核能生产是确保我们始终有能源供应的正确途径。"
