--- a/localisation/simp_chinese/plane_designer_l_simp_chinese.yml
+++ b/localisation/simp_chinese/plane_designer_l_simp_chinese.yml
@@ -159,9 +159,9 @@
  stealth_tech_1_desc: "负责研制世界上第一个隐形极的这一代飞机研发迎来了低可观测性和隐形飞机时代，能够在不被发现的情况下对敌人进行打击。"
  stealth_tech_2: "近未来隐形"
  stealth_tech_2_desc: "随着雷达技术变得越来越先进，旧技术的效果越来越差，需要进一步改进隐形材料和飞机设计原理。"
- internal_weapons_1: "内部武器舱"
+ internal_weapons_1: "早期内部武器"
  internal_weapons_1_desc: "为了进一步提高飞机的隐身能力，设计师们想出了将飞机的武器储存在机身内的方法，进一步提高了飞机的隐身能力。"
- internal_weapons_2: "扩展武器舱"
+ internal_weapons_2: "现代内部武器"
  internal_weapons_2_desc: "战斗机飞行员抱怨由于内部舱室的尺寸限制而无法携带大量弹药，设计师们努力使这些舱室变得更大，以进一步提高有效载荷能力。"
  redundant_1: "防护技术1"
  redundant_1_desc: "电传操纵系统和其他电气系统的冗余使飞机更加可靠。此外，自愈材料的早期开发使飞机更能抵抗损坏。"
@@ -425,13 +425,13 @@
  avionics_manned_4: "第4代航空电子设备"
  avionics_manned_4_desc: "飞行员需要的所有信息都会投射到头盔内的抬头显示器上，无论走到哪里，都会跟随他的视野。此外，摄像头和传感器系统使飞行员能够“透视”他的飞机，为飞行员提供前所未有的战场态势感知能力。\n\n§G设计师提示：航空电子设备是你的飞机的基础。它们为飞机的大部分性能提供了全面的提升，但是代价是增加了资源消耗§!"
  avionics_drone_1: "第1代无人机系统"
- avionics_drone_1_desc: "无人机技术的第1代让飞机可以在不需要飞行员在飞机内的情况下飞行，从空中探索新的战斗能力。\n\n§G设计师提示：无人机系统让玩家可以设计降低了工业和人力成本，但是降低了空战和防空性能的飞机。当你想要制造廉价的空中侦察或打击能力的飞机时，使用这些系统。§!\n\n§W把这个作为主要武器会制造一个§! §B无人机/运输机§!"
+ avionics_drone_1_desc: "第一代无人机技术使飞机无需飞行员在机内飞行，可以探索空中新的作战能力。\n\n§G设计师提示：无人机系统允许玩家设计出人力成本较低的飞机，但也会对其空战数据和防空数据造成影响。使用这些系统可以让飞机执行预计会造成损失的飞行任务，并希望减少人力和设备损失。§!\n\n§W把这个作为主要武器会创造一个§! §B无人机/运输机§!"
  avionics_drone_2: "第2代无人机系统"
- avionics_drone_2_desc: "第2代无人机具有更远的航程，更好的通信能力，更难被干扰或击落。这些无人机适用于远程和长时间的滞留，可以在没有飞行员在驾驶舱的情况下对一个区域进行广泛的侦察。\n\n§G设计师提示：无人机系统让玩家可以设计降低了工业和人力成本，但是降低了空战和防空性能的飞机。当你想要制造廉价的空中侦察或打击能力的飞机时，使用这些系统。§!\n\n§W把这个作为主要武器会制造一个§! §B无人机/运输机§!"
+ avionics_drone_2_desc: "第二代无人机的航程更长，通信能力更强，而且更难被干扰或击落。这些无人机航程远，盘旋时间长，无需飞行员在驾驶舱内即可对区域进行大范围侦察。\n\n§G设计师提示：无人机系统允许玩家设计出人力成本较低的飞机，但也会对其空战数据和防空数据造成影响。使用这些系统可以让飞机执行预计会造成损失的飞行任务，并希望减少人力和设备损失。§!\n\n§W把这个作为主要武器会创造一个§! §B无人机/运输机§!"
  avionics_drone_3: "第3代无人机系统"
- avionics_drone_3_desc: "装备了武器的无人机主要能够进行精确打击和近距离空中支援，也可以被用作自杀式无人机，以飞机的损失为代价实现精确打击。\n\n§B设计师提示：无人机系统让玩家可以设计降低了工业和人力成本，但是降低了空战和防空性能的飞机。当你想要制造一架便宜的飞机，它有一定的空战和打击能力，但是仍然不如一架基本的小型飞机时，使用这个系统。§!\n\n§W把这个作为主要武器会制造一个§! §B无人机/运输机§!"
+ avionics_drone_3_desc: "现在无人机已经武装起来，这些飞机主要能够进行精确打击和近距离空中支援，并且还可以用作自杀式无人机，以牺牲机身为代价进行精确打击。\n\n§B设计师提示：无人机系统允许玩家设计既能降低工业和人力成本，又能降低空战数据和防空数据。当您想要生产具有一定空战和打击能力但性能仍不如基本小型飞机的廉价飞机时，请使用此方法。§!\n\n§W把这个作为主要武器会创造一个§! §B无人机/运输机§!"
  avionics_drone_4: "第4代无人机系统"
- avionics_drone_4_desc: "现代空战无人机，能够像有人驾驶的飞机一样在所有角色中作战。这一代的无人机经过了广泛的升级，以实现分秒必争的独立决策能力，这对于现代战场的作战至关重要。\n\n§B设计师提示：无人机系统让玩家可以设计降低了工业和人力成本，但是降低了空战和防空性能的飞机。当你想要制造一架便宜的飞机，它有不错的空战和打击能力，但是仍然不能很好地承受损伤时，使用这个系统。§!\n\n§W把这个作为主要武器会制造一个§! §B无人机/运输机§!"
+ avionics_drone_4_desc: "现代空战无人机能够像有人驾驶飞机一样执行所有任务。这一代无人机经过广泛升级，可以实现瞬间独立决策，这对于现代战场上的战斗至关重要。\n\n§B设计师提示：无人机系统允许玩家设计既能降低工业和人力成本，又能降低空战数据和防空数据。当您想要生产具有不错的空战和打击能力但仍无法很好地处理损坏的廉价飞机时，请使用这些。§!\n\n§W把这个作为主要武器会创造一个§! §B无人机/运输机§!"
  wing_delta: "三角翼"
  wing_delta_desc: "一种坚固、标准的机翼形式设计，旨在提高飞机的机动性。\n\n§B设计师提示：机翼形式会对飞机的性能进行调整，但是需要消耗工业成本。§!\n\n§G这种机翼形式会轻微地提高飞机的速度和雷达优势，同时也会适度地提高飞机的防空能力，使飞机生存能力稍微提高，而不需要投入大量的工业成本来发展隐形技术。§!"
  wing_diamond: "钻石翼"
@@ -607,11 +607,11 @@
  engine_nuclear_eight_1: "核动力引擎"
  engine_nuclear_eight_1_desc: "核动力发动机可以让飞机拥有极远的航程，但是要牺牲速度和生产效率。\n\n§G设计者提示：这种发动机会让你的飞机非常昂贵，但是如果配合延长航程的设备，可能可以从本土基地打击全球任何地方。使用时请谨慎§!"
  weap_buff_transport: "空投能力"
- weap_buff_transport_desc: "可以搭载伞兵和空投货物的空间。\n\n§G设计者提示：使用这个模块来制造运输机。这个模块会让你无法使用几乎所有的武器系统，除了托盘式空射巡航导弹。§!\n\n§W把这个作为主要武器会制造出一个§!§B无人机/运输机§!"
+ weap_buff_transport_desc: "为伞兵和空投货物提供的空间。\n\n§G设计师提示：使用此模块可制造运输机。此模块将使您无法使用几乎所有武器系统，但托盘式空射巡航导弹除外。§!\n\n§W把这个作为主要武器会创造出一个§!§B无人机/运输机§!"
  weap_buff_awacs_1: "冷战时期的预警机系统"
- weap_buff_awacs_1_desc: "早期的预警机雷达和C3系统\n\n§G设计者提示：预警机系统会在执行空中侦察任务时为你的部队提供显著的空中优势加成，每架执行任务的飞机都能享受这种加成§!\n\n§W把这个作为主要武器会制造出一个§! §B预警机§!"
+ weap_buff_awacs_1_desc: "早期的预警机雷达和C3系统\n\n§G设计师提示：早期预警系统将为你的部队在执行空中侦察任务时提供显著的空中优势增益，为执行任务的中队中每架飞机提供增益。§!\n\n§W把这个作为主要武器会创造一个§! §B预警机§!"
  weap_buff_awacs_2: "现代预警机系统"
- weap_buff_awacs_2_desc: "现代预警机雷达和数据链系统\n\n§G设计者提示：预警机系统会在执行空中侦察任务时为你的部队提供显著的空中优势加成，每架执行任务的飞机都能享受这种加成§!\n\n§W把这个作为主要武器会制造出一个§! §B预警机§!"
+ weap_buff_awacs_2_desc: "现代预警机雷达和数据链系统\n\n§G设计师提示：早期预警系统将为你的部队在执行空中侦察任务时提供显著的空中优势增益，为执行任务的中队中每架飞机提供增益。§!\n\n§W把这个作为主要武器会创造一个§! §B预警机§!"
  weap_buff_awacs_3: "未来预警机系统"
  weap_buff_awacs_3_desc: "未来的空中预警雷达、数据链和无人机联网系统。\n\n§G设计者提示：空中预警系统可以在执行空中侦察任务时为你的部队提供显著的空中优势增益，每架执行任务的飞机都可以提供这种增益§!\n\n§W将这个作为主要武器将会创造一个§!§B空中预警飞机§!"
  weap_multi_at_1: "早期反坦克炮"
@@ -690,3 +690,46 @@
  dummy_equipment_2: ""
  dummy_equipment_3: ""
  dummy_equipment_4: ""
+ EQ_MOD_CAT_plane_drone_wingforms_TITLE: "四轴飞行器翼型"
+ EQ_MOD_CAT_plane_light_quadcopter_TITLE: "四轴飞行器引擎"
+ EQ_MOD_CAT_plane_stealth_weapons_TITLE: "内部空对空武器"
+ EQ_MOD_CAT_plane_stealth_cas_weapons_TITLE: "内部近距支援武器"
+ EQ_MOD_CAT_plane_stealth_mr_weapons_TITLE: "内部多用途武器"
+ EQ_MOD_CAT_plane_drone_hand_grenade_TITLE: "无人机手榴弹"
+ EQ_MOD_CAT_plane_bomb_bay_stealth_TITLE: "隐形炸弹舱"
+ engine_light_quadcopter: "四轴飞行器引擎设置"
+ engine_light_quadcopter_desc: "四轴飞行器引擎系统，专为轻型小型无人机设计。可进行短距离飞行，并携带几枚手榴弹以供轰炸。"
+ internal_weapons_3: "未来内部武器"
+ internal_weapons_3_desc: "由于战斗机飞行员抱怨由于内部舱室的尺寸限制而无法携带大量弹药，设计师努力使内部舱室变得更大，以进一步提高有效载荷能力。"
+ weap_drone_hand_grenade: "无人机手榴弹"
+ weap_drone_hand_grenade_desc: "一种带有遥控释放系统的手榴弹，设计用于通过四轴飞行器无人机系统向目标投放。"
+ avionics_drone_quadcopter: "四轴飞行器系统"
+ avionics_drone_quadcopter_desc: "典型的沃尔玛无人机，只是被重新用于更具攻击性的用途。"
+ wing_quadcopter: "四轴飞行器框架"
+ wing_quadcopter_desc: "一种无人机设计，用于制造极其便宜且可​​靠的无人机以供大量使用。"
+ weap_int_ag_strat_2: "内部炸弹舱"
+ weap_int_ag_strat_2_desc: "内部炸弹舱，增加了飞机的隐身能力，同时还允许其携带一定量的弹药。\n\n§G设计师提示：该模块将允许您建造隐形轰炸机，增加其雷达优势，同时使它们具有战略轰炸能力。§!\n\n§W把这个作为主要武器会创造一个§! §B战略轰炸机§!"
+ weap_int_mp_light_hardpoint_2: "第1代内部轻型挂架"
+ weap_int_mp_light_hardpoint_2_desc: "内部轻型挂架允许飞机在内部舱内携带多种武器，从而提高其隐身能力。这些挂架价格低廉，旨在为轻型飞机配备一些武器，或帮助补充其他飞机上的弹药。这些挂架上配备的武器包括短程空对空导弹、250-500磅炸弹和火箭吊舱。\n\n§G设计师提示：这些挂点旨在让各国能够建造具有轻型武器能力的隐形飞机，非常适合预算有限的国家。§!\n\n§W把这个作为主要武器会创造一个§! §B多用途战斗机§!\n\n§R警告：舰载多用途战斗机只会在海战期间攻击敌舰§!"
+ weap_int_mp_light_hardpoint_3: "第2代内部轻型挂架"
+ weap_int_mp_light_hardpoint_3_desc: "$weap_int_mp_light_hardpoint_2_desc$"
+ weap_int_mp_light_hardpoint_4: "第3代内部轻型挂架"
+ weap_int_mp_light_hardpoint_4_desc: "$weap_int_mp_light_hardpoint_2_desc$"
+ weap_int_a2a_hardpoint_1: "第1代内部空对空挂架"
+ weap_int_a2a_hardpoint_1_desc: "内部空对空武器具有更好的隐身特性，但代价是弹药较少，并且弹头威力也可能较小。\n\n§G设计师提示：内部空对空挂点主要为隐形空中优势飞机设计。您将获得雷达优势增益，同时仍可获得一些空中攻击，尽管比外部挂点少。§!\n\n§W把这个作为主要武器会创造一个§! §B空优战斗机§!\n\n§R警告：舰载空优战斗机只会在海战期间攻击敌方飞行器§!"
+ weap_int_a2a_hardpoint_2: "第2代内部空对空挂架"
+ weap_int_a2a_hardpoint_2_desc: "$weap_int_a2a_hardpoint_1_desc$"
+ weap_int_a2a_hardpoint_3: "第3代内部空对空挂架"
+ weap_int_a2a_hardpoint_3_desc: "$weap_int_a2a_hardpoint_1_desc$"
+ weap_int_mp_med_hardpoint_2: "第1代内部中型武器挂架"
+ weap_int_mp_med_hardpoint_2_desc: "专为携带中型武器而设计的挂架。轻型反舰导弹、精确制导弹药、反坦克导弹、中型巡航导弹、远程空对空导弹、机枪吊舱等。这些挂架为飞机提供了广泛的武器选择，同时还提供了增强的隐身能力。\n\n§G设计师提示：中型挂载点是多用途飞机的真正定义，几乎可以执行所有飞机任务，并且这些任务的统计数据使飞机变得有用，但代价是增加工业成本。这些模块使飞机成为平衡的全能飞机。§!\n\n§W把这个作为主要武器会创造一个§! §B多用途战斗机§!\n\n§R警告：舰载多用途战斗机只会在海战期间攻击敌方舰艇§!"
+ weap_int_ag_cas_hardpoint_2: "第1代内部近距空中支援挂架"
+ weap_int_ag_cas_hardpoint_2_desc: "挂架设计用于携带大量空对地弹药。这些挂架以携带更多弹药的能力换取携带多种武器系统种类的能力，例如空对地导弹、更重的炸弹和更多的空射巡航导弹，同时还提高了隐身能力。\n\n§G设计师提示：近距空中支援挂点将显著提高飞机的对地攻击和战略轰炸能力，但代价是无法对飞机进行空袭，并降低雷达优势。§!\n\n§W把这个作为主要武器会创造一个§! §B近距空中支援机§!"
+ weap_int_mp_med_hardpoint_3: "第1代内部中型武器挂架"
+ weap_int_mp_med_hardpoint_3_desc: "$weap_int_mp_med_hardpoint_2_desc$"
+ weap_int_mp_med_hardpoint_4: "第3代内部中型武器挂架"
+ weap_int_mp_med_hardpoint_4_desc: "$weap_int_mp_med_hardpoint_2_desc$"
+ weap_int_ag_cas_hardpoint_3: "第2代内部近距空中支援挂架"
+ weap_int_ag_cas_hardpoint_3_desc: "$weap_int_ag_cas_hardpoint_2_desc$"
+ weap_int_ag_cas_hardpoint_4: "第3代内部近距空中支援挂架"
+ weap_int_ag_cas_hardpoint_4_desc: "$weap_int_ag_cas_hardpoint_2_desc$"
