--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -8002,3 +8002,28 @@
  SYR.Nat_Populism_Baath: "£generic_Nat_Populism_small 叙利亚复兴党（亲伊拉克派）"
  SYR.Nat_national_covenent: "£generic_Nat_Populism_small 民族协约党"
  SYR.Nat_Fascism_icon: "£SYR_Nat_Fascism"
+ ESB.conservatism: "£FAR_western_conservative 民主胜利共和国"
+ ESB.conservatism_icon: "£FAR_western_conservative"
+ ESB.liberalism: "£FAR_western_liberalism 团结党"
+ ESB.liberalism_icon: "£FAR_western_liberalism"
+ ESB.socialism: "£FAR_western_socialism 人民民主联盟"
+ ESB.socialism_icon: "£FAR_western_socialism"
+ ESB.Communist-State: "£FAR_communist-state 西伯利亚共产党"
+ ESB.Communist-State_icon: "£FAR_communist-state"
+ ESB.anarchist_communism: "£FAR_anarchist_communism 社会主义替代方案"
+ ESB.anarchist_communism_icon: "£FAR_anarchist_communism"
+ ESB.oligarchism: "£FAR_oligarchism 民主党"
+ ESB.oligarchism_icon: "£FAR_oligarchism"
+ ESB.Neutral_Communism: "£FAR_neutral_communism Maoistskaya Partiya"
+ ESB.Neutral_Communism_icon: "£FAR_neutral_communism"
+ ESB.Neutral_Libertarian: "£URA_neutral_libertarian Democraticheskaya Party"
+ ESB.Neutral_Libertarian_icon: "£URA_neutral_libertarian"
+ ESB.neutral_Social: "£FAR_neutral_socialism 社会民主党"
+ ESB.neutral_Social_icon: "£FAR_neutral_socialism"
+ ESB.Neutral_conservatism: "£FAR_neutral_conservative Narodno-Patrioticheskiy Blok"
+ ESB.Neutral_conservatism_icon: "£FAR_neutral_conservative"
+ ESB.Nat_Fascism: "£FAR_nat_fascism 滨海抵抗组织"
+ ESB.Nat_Fascism_icon: "£FAR_nat_fascism"
+ ESB.Nat_Populism: "£SOV_nationalist_right_wing_populist 东西伯利亚自由民主党"
+ ESB.Nat_Populism_icon: "£SOV_nationalist_right_wing_populist"
+ ESB.Nat_Autocracy: "£FAR_nat_autocracy 东西伯利亚共和军 "
