--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1048,8 +1048,8 @@ DEN_Reform_Fuhrungsstaab_der_Luftwaffe_desc: "In tandem with Flyvevåbnet's tran
  denmark.4003.d2: "[SOV.GetLeader] has refused to sign off on providing some shiny new fighters for our brave airforce! [DEN.GetLeader] is said to be furious with the showing from the [SOV.GetAdjective] government and has been attempting to get a response from Moscow to no avail."
  denmark.4003.o1: "Those Bastards!"
  denmark_agrar_event.10.t: "Environmental activist protests"
- denmark_agrar_event.10.d: "Environmental activist protests are organice demonstrations to aim raising awareness and prompting action on various environmental issues."
- denmark_agrar_event.10.a: "they complain as alsways"
+ denmark_agrar_event.10.d: "Environmental activist protests are organic demonstrations to aim raising awareness and prompting action on various environmental issues."
+ denmark_agrar_event.10.a: "they complain as always"
  denmark_agrar_event.11.t: "Environmental activist protests"
  denmark_agrar_event.11.d: "Join us for the Green Earth Rally, a peaceful and impactful protest to raise awareness about the urgent need for climate action. This family-friendly event invites individuals of all ages and backgrounds to come together and advocate for a sustainable future."
  denmark_agrar_event.11.a: "Spasser?"
@@ -1742,18 +1742,18 @@ DEN_wine_grow_tt: "Viticulture in Denmark is a relatively recent phenomenon comp
 
 DEN_wine_grow_tt_II: "Agricultural subsidies are crucial tools for supporting farmers, stabilizing food supplies, and promoting sustainable practices. And maybe in the end we will get a small profit."
 
-DEN_decision_Agriculture: "Agriculture subsiidies"
+DEN_decision_Agriculture: "Agricultural subsidies"
 DEN_decision_Agriculture_desc: "Agricultural subsidies are financial aids provided by governments to support farmers and agribusinesses. These subsidies aim to stabilize food prices, ensure a steady food supply, promote agricultural productivity, and protect farmers' incomes.\n\n§YFarmer anger§!: [?ROOT.DEN_farmer_anger]%\n§YEnvirementalist anger§!: [?ROOT.DEN_environmentalist_anger]%"
 DEN_Subventions_for_Grain_decision: "Grain Subsidies"
 DEN_Subventions_for_Pigs_decision: "Livestock Subsidies"
 DEN_Subventions_for_Beef_decision: "Aquaculture Subsidies"
 DEN_Subventions_for_Fishing_decision: "Fisheries Subsidies"
 DEN_Request_Whine_grow_by_EU_decision: "Grow our own Wine"
-DEN_Subventions_modernization_decision: "Subsidies modernation efforts for more enviremental friendlly equipment"
+DEN_Subventions_modernization_decision: "Subsidies modernization efforts for more environmentally friendly equipment."
 
 DEN_idea_Agriculture: "Modern Agriculture"
 DEN_idea_Agriculture_desc: "Modern agriculture is characterized by the integration of advanced technologies, sustainable practices, and innovative methods to increase productivity, efficiency, and environmental stewardship. This approach aims to meet the food demands of a growing global population while minimizing the ecological footprint."
-DEN_idea_Agriculture_II: "Agriculture subsiidies"
+DEN_idea_Agriculture_II: "Agriculture subsidies"
 DEN_idea_Agriculture_II_desc: "Agricultural subsidies are financial support mechanisms provided by governments to the agricultural sector to stabilize food prices, ensure a stable food supply, and support farmers' incomes. These subsidies can take various forms and serve multiple purposes, addressing both economic and social goals."
 DEN_wineland: "Wine from denmark"
 DEN_wineland_desc: "Danish wine production is a dynamic and growing industry, characterized by innovation and adaptation to changing climatic conditions. With a focus on quality and sustainability, Danish wines are carving out a niche in the global wine market."
