--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -7604,7 +7604,7 @@
  DEN.Neutral_conservatism_alt_desc: "自由联盟是丹麦的一个古典自由主义和右翼自由主义政党。它是中右翼集团的一个组成部分，成立于2007年，是从社会自由党分裂出来的。"
  DEN.Nat_Populism_alt: "£DEN_Nat_Populism_alt 新右派"
  DEN.Nat_Populism_alt_icon: "£DEN_Nat_Populism_alt"
- DEN.Nat_Populism_alt_desc: "丹麦人民党是丹麦主要的民族主义和右翼民粹主义政党。它由前进步党成员于1995年创立。它以反移民为平台开展活动，保护丹麦人民的自由和文化遗产，促进创业和经济增长。他们还寻求保护丹麦的主权，对抗欧盟。该党的经济政策更接近中间和中左翼，使其在丹麦社会中具有独特的地位。坚定的反移民立场使其在丹麦政治光谱中坚定地处于民族主义和右翼民粹主义的地位。"
+ DEN.Nat_Populism_alt_desc: "新右派是丹麦的一个政党，由佩妮勒·维尔蒙德和彼得·赛尔·克里斯滕森于2015年创立。该党派位于政治光谱的右翼，主张将经济自由主义、民族保守主义和严格的移民政策相结合。"
  CAR.liberalism_2013: "£CAR_western_liberalism_alt 中非复兴联盟"
  CAR.liberalism_2013_desc: "中非复兴联盟成立于2013年底，是中非共和国组织混乱的自由党的继承者。它在阿尼塞-乔治·多洛盖莱竞选总统期间成立，并慢慢成为中非新自由主义的支柱和代表。"
  CAR.Conservative: "£CAR_emergency_conservatism 团结一心运动"
