--- a/localisation/simp_chinese/unit_medals_l_simp_chinese.yml
+++ b/localisation/simp_chinese/unit_medals_l_simp_chinese.yml
@@ -204,3 +204,8 @@
  za_crov_i_hrabrost:0 "鲜血与无畏"
  krov_chest_rodina_otvaga:0 "热血荣耀祖国勇气"
  hero_of_the_pmc_wagner:0 "瓦格纳英雄"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "上校"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_1:0 "准将"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_2:0 "少将"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "中将"
+ DEN_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "上将"
