--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ v1.10.0
   - After the expiration of a office the AI will wait two weeks to give some room for the player to take an office
   - The AI will now move to a different EU law if they recently failed a law
   - AI will now try to push for the historical expansions of the EU on historical AI
+  - France should now intervene in Afghanistan alongside the other coalition partners
 
  Balance:
   - Increased Strength losses in combat by (around 2 times greater), to make losses more realistic and decrease amount of 0 losses in combat
@@ -164,6 +165,10 @@ v1.10.0
   - Added modifiers for income and cost from selling and buying on international market
   - Added SigSauer to Switzerland
   - Added three new continuous focuses: Temporary Intelligence Agents, Nuclear Energy Investments, Encourage Foreign Investments
+
+ Game Rules:
+  - Added a new "Enable Monthly Domestic Independence Tick" game rule
+  - Added a new "Monthly Domestic Independence Tick Amount" game rule
 
  Graphics:
   - Added the "Toofan MRAP" for Iran (2005 Inf EQP)
