--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  russian_subjects_focus_tree: "Tree of Focuses of the Subject of Russia"
  crimea_focus: "Tree of Focuses of Crimea"
- 
+
  SUB_start: "Adopt the Constitution of Russia"
  SUB_start_desc: "We are ready to fully adopt the Constitution of Russia"
  SUB_start_industry: "Start Reviving The Industry"
@@ -53,12 +53,12 @@
  SUB_no_lgbt: "No Rights for LGBT People"
  SUB_no_lgbt_desc: "We will not allow the spread of LGBT people in our republic"
  SUB_zavods: "We Need More Zigg..Factories"
- SUB_zavods_desc: "Our republic needs more production facilities"
+ SUB_zavods_desc: "Our republic needs more Civilian Industry to truly help establish our republic as a new economic power."
  SUB_cooperate_rjd: "Integration With Russian Railways"
  SUB_cooperate_rjd_desc: "We are ready to fully integrate into Russian railways"
  TAT_natbat_tatar: "National Battalions"
  TAT_natbat_tatar_desc: "We are ready to create national battalions that will take part in the war for our freedom and the freedom of Russia"
- TAT_ratnik: "Equip Our Fighters In The "Ratnik""
+ TAT_ratnik: "Equip Our Fighters In The \"Ratnik\""
  TAT_ratnik_desc: ""
  TAT_natbat: "Tatarstan Regiment"
  TAT_natbat_desc: "We are ready to start forming a regiment of those who want to fight for their homeland"
@@ -236,7 +236,7 @@
  SUB_nationalism_category_desc: "Our nation has gained self-awareness relatively recently, and the collapse of the USSR gave us a chance to gain freedom, but we refused it. Now we have a second chance, but we must decide for ourselves firmly and clearly whether we are with Russia or without it\n\nSupport for separatism in our country is equal to: §Y[?ROOT.subjectinped]§!"
  SUB_anti_russia: "Declare Yourself a §YSovereign State§!"
 
- 
+
 
  TAT_pro_russ: "The Pro-Russian Way"
  TAT_pro_russ_desc: "We will be together with Russia"
@@ -248,7 +248,7 @@
  TAT_economic_desc: "Our economic situation differs from other republics of Russia, we endured the 90s much easier and this is a merit of our competent economic policy"
  TAT_western_start_desc: "It is time for our country to embark on the path of democratic government"
 
- 
+
  TAT_promka: "Tatarstan Industry"
  TAT_promka_desc: "We should not stop there. We will continue to develop the domestic industry so that our republic flourishes."
  TAT_rebuild_promka: "Course For The Development Of Industry"
@@ -582,7 +582,7 @@
 
  TAT_help_farmers: "Tatar Military Industrial Complex"
  TAT_education_commi: "Tatar Red Education"
- 
+
  TAT_react_start: "In The New Millennium"
  TAT_react_start_desc: "Tatarstan is the only one of all the subjects of Russia that was able to survive the 90s relatively calmly. Now we are ready to build on this success"
  TAT_react_corruption: "Anti-Corruption Fight"
@@ -683,7 +683,7 @@
  KHM_world_czech: "Partnership with: [CZE.GetNameWithFlag]"
  KHM_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
  KHM_clear_air: "Request Participation in The "Clean Air" Program"
- 
+
  CHE_attack_geo: "Propose An Attack On [GEO.GetNameWithFlag]"
  CHE_attack_ukr: "Propose An Attack On [UKR.GetNameWithFlag]"
  CHE_bund_sil: "Organize a Separatist Rebellion In [POL.GetNameWithFlag]"
@@ -773,7 +773,7 @@
  subject_rus.26.t: "Islamists Have Seized Power"
  subject_rus.26.d: "Russia has failed to curb its control over Chechnya and is now controlled by radical Islamists"
  subject_rus.26.a: "In the name of Allah!"
- 
+
  subject_rus.27.t: "Bashkir Investments"
  subject_rus.27.d: "§Y[BSH.GetNamewithFlag]§! government is offering agro-industrial investments in one of our regions. Will we agree?"
  subject_rus.27.a: "Yes"
@@ -942,7 +942,7 @@
  CHE_black_arm_tt: "We will start distributing illegal weapons in [ARM.GetNameWithFlag]"
  CHE_black_warner_tt: "We will start distributing illegal weapons in [PER.GetNameWithFlag]"
  CHE_black_tur_tt: "We will start distributing illegal weapons in [TUR.GetNameWithFlag]"
- 
+
  Sovfed_agree_Idel: "Our bill about Idel-Ural has been passed"
 
  CRM_zone: "Free Economic Zone"
@@ -1272,7 +1272,7 @@
  KHM_democratic_idealism_desc: "It is time to leave the ghosts of the past behind and pursue democratic reforms at all cost."
  KHM_Measures_of_rapprochement_with_the_West: "Measures of Rapprochement with the West"
  KHM_Measures_of_rapprochement_with_the_West_desc: "The West is our friend. And we will repeat it all the time"
- 
+
  KHM_commi: "Red Yugra"
  KHM_commi_desc: "Communist ideals have come back to our region."
  KHM_unions: "Work With Unions"
@@ -1393,7 +1393,7 @@
  BSH_bashkiria_idel_ural_inner_desc: "We are ready to offer Russia a completely new entity that will be able to raise the economy of the region to a new level"
  BSH_bashkiria_idel_ural_outer: "Independent Idel-Ural"
  BSH_bashkiria_idel_ural_outer_desc: "Together with the peoples of the Volga region, we will create the strongest state on the territory of the former Russia"
- 
+
 
  BSH_factories: "Ministry of Industry"
  BSH_factories_desc: "The Ministry of Industry will help us to revive our industry"
@@ -1758,15 +1758,15 @@
  BSH_bus_export_arm: "Export Buses to §Y[ARM.GetNameWithFlag]§!"
  BSH_bus_export_kaz: "Export Buses to §Y[KAZ.GetNameWithFlag]§!"
  BSH_bus_export_che: "Export Buses to §Y[CHE.GetNameWithFlag]§!"
- 
+
  BSH_mtz_create_TT: "Decisions For The Sale of §YNEFAZ Buses Will Be Open§!"
 
- 
+
  BSH_reform_railway: "Transport Reform"
  BSH_eternal_reform: "Eternal Transport Reform"
  BSH_eternal_reform_desc: "Despite all the loud announcements about transport reforms, the current government still cannot complete them. People have been joking about the eternal transport reform for a long time and they have a place to be"
 
- 
+
  BSH_military_focus: "Military Focus"
  BSH_military_focus_desc: "The country has focused most of its available resources on military construction and production."
  BSH_civilian_focus: "Civilian Focus"
@@ -2046,8 +2046,8 @@
  BSH_anti_corruption: "Anti-Corruption Policy"
  BSH_new_roads: "New Roads"
 
- 
- chechnya.0.t: "Chechnya Offers Us To Establish Religious tourism"
+
+ chechnya.0.t: "Chechnya Offers Us To Establish Religious Tourism"
  chechnya.0.d: "The Chechen Republic offers us to establish Religious tourism between our countries, are we ready to agree?"
  chechnya.0.a: "Interesting"
  chechnya.0.b: "No"
@@ -2098,7 +2098,7 @@
  chechnya.11.t: "Chechens Made a Successful Attempt On The President of Russia"
  chechnya.11.d: "Dissatisfaction of the Chechen diaspora resulted in the most terrible and unexpected incident. Chechen agents organized a successful attack and murder of our President. We have no choice but to announce the start of a special operation"
  chechnya.11.a: "God, help us"
- 
+
 
  chechnya.12.t: "Ramzan Kadyrov Offers To Attack Ukraine"
  chechnya.12.d: "Ramzan Kadyrov proposes to conduct a special operation on the territory of Ukraine.  This country, in his opinion, harms Russia too much, it's time to deal with it"
@@ -2161,7 +2161,7 @@
  chechnya.25.a: "Ok"
 
  chechnya.26.t: "The Uprising in Silesia"
- chechnya.26.d: "Head of Chechnya proposed to hold a "referendum on independence" in Silesia. This will require serious financial costs and time from us, perhaps even we will not be able to achieve success, due to the opposition of the Polish government. Will we agree ?"
+ chechnya.26.d: "Head of Chechnya proposed to hold a \"referendum on independence\" in Silesia. This will require serious financial costs and time from us, perhaps even we will not be able to achieve success, due to the opposition of the Polish government. Will we agree ?"
  chechnya.26.a: "Let's have a Silesian riot"
  chechnya.26.b: "No"
 
@@ -2172,9 +2172,9 @@
  chechnya.28.t: ""
  chechnya.28.d: ""
  chechnya.28.a: ""
- 
- CHE_caucas: "Caucasian Federation" 
- 
+
+ CHE_caucas: "Caucasian Federation"
+
  CHE_nationalise_caucas_category: "Nationalization of the Caucasus"
  CHE_nationalise_caucas_category_desc: "It is time for the Caucasians to become a united nation and go together to a prosperous future"
  CHE_nationalise_azer: "Nationalization of [AZE.GetNamewithFlag]"
@@ -2219,7 +2219,7 @@
  CHE_Strengthen_com_partys_agendaz_arm: "Criticism of the political course of Armenia"
  CHE_Financing_of_protest_movementsz_arm: "Take over the protest initiative"
  CHE_Establish_connectionsz_arm: "Restore old ties in Armenia"
- 
+
 
  CHE_we_are_at_war: "We Are At War!"
  CHE_we_are_at_war_desc: "We are facing a war for the existence of our state itself, we need to throw all our strength to save it"
@@ -2235,7 +2235,7 @@
  CHE_smuggle_guns_from_aze_desc: "Caring people from Azerbaijan have sent us equipment"
  CHE_smuggle_guns_from_geo: "Georgian Aid"
  CHE_smuggle_guns_from_geo_desc: "Caring people from Georgia have sent us equipment"
- CHE_invite_grey_wolves: "Invite the "Grey Wolves""
+ CHE_invite_grey_wolves: "Invite the \"Grey Wolves\""
  CHE_invite_grey_wolves_desc: "We have to rely on help from any source."
  CHE_last_defense: "Last Frontier"
  CHE_last_defense_desc: "We have no hope of winning, but we will fight to the end, rallying together and rejecting past differences."
@@ -2297,7 +2297,7 @@
  CHE_bahrain_invest_desc: "Investments from this state will be useful to us."
  CHE_dubai_electro: "Dubai Energy Companies"
  CHE_dubai_electro_desc: "The energy companies of the Arab Emirates are ready to help us with the energy problem of our country."
- 
+
  CHE_soc_medical: "Restored Medicine"
  CHE_new_roads: "Restored Roads"
 
@@ -2306,19 +2306,19 @@
  black_market2_tt: "We will receive income from the black market: $$§G0.120§!"
  narcos_market_tt: "We will receive income from drug trafficking: $$§G0.080§!"
  narcos_market2_tt: "We will receive income from drug trafficking: $$§G0.160§!"
- 
+
  CHE_battalion_tt: "§YThe 141st special motorized regiment named after A. A. Kadyrov§! will be created on the territory of Chechnya"
- CHE_battalion_yug_tt: "§YMotorized rifle battalion "Yug"§! will be created on the territory of Chechnya"
- CHE_battalion_sever_tt: "§YMotorized rifle battalion "Sever"§! will be created on the territory of Chechnya"
- CHE_battalion_ahmat_sever_tt: "§YMotorized rifle battalion "Ahmat-Sever"§! will be created on the territory of Chechnya"
- CHE_battalions_ahmat_tt: "§YMotorized rifle battalions "Ahmat-Yug" "Ahmat-Zapad" and "Ahmat-Vostok"§! will be created on the territory of Chechnya"
- CHE_battalions_ahmat_other_tt: "§YMotorized rifle battalions "Ahmat-Chechnya" and "Ahmat-Russia"§! will be created on the territory of Chechnya"
+ CHE_battalion_yug_tt: "§YMotorized rifle battalion \"Yug\"§! will be created on the territory of Chechnya"
+ CHE_battalion_sever_tt: "§YMotorized rifle battalion \"Sever\"§! will be created on the territory of Chechnya"
+ CHE_battalion_ahmat_sever_tt: "§YMotorized rifle battalion \"Ahmat-Sever\"§! will be created on the territory of Chechnya"
+ CHE_battalions_ahmat_tt: "§YMotorized rifle battalions \"Ahmat-Yug\" \"Ahmat-Zapad\" and \"Ahmat-Vostok\"§! will be created on the territory of Chechnya"
+ CHE_battalions_ahmat_other_tt: "§YMotorized rifle battalions \"Ahmat-Chechnya\" and \"Ahmat-Russia\"§! will be created on the territory of Chechnya"
  CHE_battalions_ahmat_other2_tt: "New battalions will arrive in our army"
  CHE_battalions_vostok_tt: "§YThe Vostok Battalion§! will be created on the territory of Chechnya"
  CHE_battalions_police_tt: "§YSpecial Purpose Police Regiment named A.Kadyrov§! will be created on the territory of Chechnya"
  CHE_battalions_terek_tt: "§YSOBR Terek§! will be created on the territory of Chechnya"
  CHE_battalions_oil_tt: "§YOil Regiment§! will be created on the territory of Chechnya"
- CHE_battalion_smert_tt: "§YBattalion "Smert" will go to the aid of Novorossiya§!"
+ CHE_battalion_smert_tt: "§YBattalion \"Smert\" will go to the aid of Novorossiya§!"
  CHE_nationalise_tt: "Now you will have access to decisions for the nationalization of the lands of the Caucasus"
  CHE_chechen_battalion_TT: "Chechen battalions stationed abroad will return back to Ichkeria"
  CHE_defence_nation: "The Last Battle"
