--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -103,8 +103,8 @@
  SUB_rosatom_desc: "Rosatom is the state nuclear energy corporation of Russia. It controls the Russian nuclear-industrial complex."
  SUB_zdravo: "2011 Healthcare Reforms"
  SUB_zdravo_desc: "The 2011 Healthcare Reforms were proposed by Prime Minister Vladimir Putin. It allocated over 300 billion rubles to improve healthcare within Russia."
- SUB_union_state: "Coordinate Union Programs With Belarus"
- SUB_union_state_desc: "We will also participate in the coordination of projects of the Union State of Russia and Belarus"
+ SUB_union_state: "Coordinate With Union State"
+ SUB_union_state_desc: "We will also participate in the coordination of projects of the Union State"
  SUB_gay_propaganda_laws: "Gay Propaganda Laws"
  SUB_gay_propaganda_laws_desc: "If love is love, then water is water. So why don't you drink from the toilet?"
  SUB_uchneia_s_br: "Conduct Exercises With Belarus"
@@ -150,6 +150,12 @@
 
  SUB_internal_policy: "Foreign Policy Activities"
  SUB_internal_policy_desc: "Russia is actively engaged in foreign policy activities, we are ready to participate in it and conduct various kinds of relations with countries on behalf of Russia and our republic"
+ SUB_police_out: "Interaction With Special Subjects"
+ SUB_police_out_desc: "Russia's foreign policy also includes an expansionary part, and we are ready to cooperate with the subjects and objects of this expansion"
+ SUB_novorossiya: "Russia - Novorossiya"
+ SUB_novorossiya_desc: "Novorossiya is returning home, and we are ready to interact with new subjects of Russia"
+ SUB_warsaw: "Russia - Warsaw Pact"
+ SUB_warsaw_desc: "We are ready to start cooperation with the Warsaw Pact members"
  SUB_russia_islamic: "Russia - The Islamic World"
  SUB_russia_islamic_desc: "Russia - The Islamic World is a project that was created relatively recently for Russia's interaction with the Islamic world"
  SUB_russia_belarus: "Russia - Belarus"
@@ -170,6 +176,9 @@
  SUB_trade_uzbek_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[UZB.GetNamewithFlag]§!"
  SUB_trade_czech_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[CZE.GetNamewithFlag]§!"
  SUB_trade_kazah_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[KAZ.GetNamewithFlag]§!"
+
+ SUB_trade_novorossiya_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[NOV.GetNamewithFlag]§! countries"
+ SUB_trade_warsaw_tt: "We will get §Yaccess§! to §Ytrade deals§! with §YWarsaw Pact§! countries"
 
 
  SUB_min_obr: "Ministry of Education"
@@ -662,6 +671,15 @@
  BSH_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  BSH_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
  BSH_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
+ BSH_world_dpr: "Partnership with: [DPR.GetNameWithFlag]"
+ BSH_world_hpr: "Partnership with: [HPR.GetNameWithFlag]"
+ BSH_world_lpr: "Partnership with: [LPR.GetNameWithFlag]"
+ BSH_world_opr: "Partnership with: [OPR.GetNameWithFlag]"
+ BSH_world_pol: "Partnership with: [POL.GetNameWithFlag]"
+ BSH_world_rom: "Partnership with: [ROM.GetNameWithFlag]"
+ BSH_world_bul: "Partnership with: [BUL.GetNameWithFlag]"
+ BSH_world_cze: "Partnership with: [CZE.GetNameWithFlag]"
+ BSH_world_hun: "Partnership with: [HUN.GetNameWithFlag]"
  BSH_clear_air: "Request Participation in The "Clean Air" Program"
 
  TAT_unite_idel_ural: "Request For The Creation Of Idel-Ural"
@@ -675,6 +693,15 @@
  TAT_world_cuba: "Partnership with: [CUB.GetNameWithFlag]"
  TAT_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
  TAT_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
+ TAT_world_dpr: "Partnership with: [DPR.GetNameWithFlag]"
+ TAT_world_hpr: "Partnership with: [HPR.GetNameWithFlag]"
+ TAT_world_lpr: "Partnership with: [LPR.GetNameWithFlag]"
+ TAT_world_opr: "Partnership with: [OPR.GetNameWithFlag]"
+ TAT_world_pol: "Partnership with: [POL.GetNameWithFlag]"
+ TAT_world_rom: "Partnership with: [ROM.GetNameWithFlag]"
+ TAT_world_bul: "Partnership with: [BUL.GetNameWithFlag]"
+ TAT_world_cze: "Partnership with: [CZE.GetNameWithFlag]"
+ TAT_world_hun: "Partnership with: [HUN.GetNameWithFlag]"
  TAT_clear_air: "Request Participation in The "Clean Air" Program"
 
  KHM_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
@@ -683,6 +710,14 @@
  KHM_world_czech: "Partnership with: [CZE.GetNameWithFlag]"
  KHM_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
  KHM_clear_air: "Request Participation in The "Clean Air" Program"
+ KHM_world_dpr: "Partnership with: [DPR.GetNameWithFlag]"
+ KHM_world_hpr: "Partnership with: [HPR.GetNameWithFlag]"
+ KHM_world_lpr: "Partnership with: [LPR.GetNameWithFlag]"
+ KHM_world_opr: "Partnership with: [OPR.GetNameWithFlag]"
+ KHM_world_pol: "Partnership with: [POL.GetNameWithFlag]"
+ KHM_world_rom: "Partnership with: [ROM.GetNameWithFlag]"
+ KHM_world_bul: "Partnership with: [BUL.GetNameWithFlag]"
+ KHM_world_hun: "Partnership with: [HUN.GetNameWithFlag]"
  
  CHE_attack_geo: "Propose An Attack On [GEO.GetNameWithFlag]"
  CHE_attack_ukr: "Propose An Attack On [UKR.GetNameWithFlag]"
@@ -695,6 +730,10 @@
  PMR_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  PMR_world_uzbek: "Partnership with: [UZB.GetNameWithFlag]"
  PMR_world_kaz: "Partnership with: [KAZ.GetNameWithFlag]"
+ PMR_world_dpr: "Partnership with: [DPR.GetNameWithFlag]"
+ PMR_world_hpr: "Partnership with: [HPR.GetNameWithFlag]"
+ PMR_world_lpr: "Partnership with: [LPR.GetNameWithFlag]"
+ PMR_world_opr: "Partnership with: [OPR.GetNameWithFlag]"
 
  subject_rus.1.t: "Exclusion from the Federation Council"
  subject_rus.1.d: "We have officially become members of the Federation Council. Now we can participate more actively in the domestic and possibly foreign policy of our country"
