--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -729,8 +729,8 @@
  GER_yanke_go_home_desc: "我们厌倦了那些吃热狗、咀嚼奶油蛋糕、喝根汁啤酒的洋基人成为世界警察的日子！\n是时候有人站出来让他们回家了，还清债务，管好自己那些该死的事！"
  GER_revenge_for_versailles: "撕碎凡尔赛条约"
  GER_revenge_for_versailles_desc: "当德皇于1918年宣布祖国无条件投降时，德意志帝国屈服了，他让我们看起来像是傻瓜。人们因为皇帝的背叛而付出了难以忘怀的代价。80多年来，我们一直被当作狗对待，我们再也忍受不了被当作狗对待一年了！"
- GER_ignore_final_settlement: "忽视最终解决协议"
- GER_ignore_final_settlement_desc: "《最终解决协议》是盟军的另一项要求，即祖国的叛徒代表他们自己，而不是德国人民！祖国被这些荒谬的条约和协议的枷锁奴役得太久了，现在是德国人民为自己的权利和国家挺身而出，推翻这些要求的时候了！"
+ GER_ignore_final_settlement: "忽视最终解决条约"
+ GER_ignore_final_settlement_desc: "《最终解决条约》是盟军的另一项要求，即祖国的叛徒代表他们自己，而不是德国人民！祖国被这些荒谬的条约和协议的枷锁奴役得太久了，现在是德国人民为自己的权利和国家挺身而出，推翻这些要求的时候了！"
  GER_bully_of_europe: "欧洲的恶霸"
  GER_bully_of_europe_desc: "我们成为受害者太久了，我们终于破解了！我们不会再被踩到了。我们终于站起来，向我们的压迫者表明，我们不会接受被当作狗对待！是时候向这些小丑展示谁是真正的小丑了..."
  GER_crusade_against_democracy: "反民主主义十字军"
@@ -2809,7 +2809,7 @@
  Drones: "无人机"
  GER_Anker_army: "欧洲主力军"
  integrate_in_bundeswehr_Structure: "将我们的一些盟友整合到我们的架构中。"
- GER_idea_Heer_2010_desc: "德国联邦国防军的结构陆军2010旨在使军队适应不断变化的安全环境和德国联邦国防军的新任务，例如多国稳定行动和预防冲突。\n§Y当超过最终解决的限度、德国成立欧洲合众国或放弃民主道路时，这个国家精神就会被移除。§!"
+ GER_idea_Heer_2010_desc: "德国联邦国防军的结构陆军2010旨在使军队适应不断变化的安全环境和德国联邦国防军的新任务，例如多国稳定行动和预防冲突。\n§Y当超过\"最终解决条约\"的限度、德国成立欧洲合众国或放弃民主道路时，这个国家精神就会被移除。§!"
  Ger_idea_Heer_2010_2_desc: "德国联邦国防军的结构军队调整旨在减少士兵数量，并更加注重多国稳定行动和冲突预防，然后是国家和联盟防御。"
  GER_idea_Heeresaufklarungstruppe_desc: "陆军侦察部队的成立是为了统一陆军所有侦察部队。"
  Ger_idea_European_Army: "德国主力军"
@@ -2865,9 +2865,9 @@
  germany.560.b: "我们宣布不再受本合同的约束。"
  GER_idea_Army_Training_Command_desc: "当德国成立欧洲合众国或放弃民主道路时，这个国家精神将被删除。"
  GER_idea_Marinekommando_desc: "§Y当德国成立欧洲合众国或放弃民主道路时，这个国家精神将被删除。§!"
- GER_Idea_Heeresflieger_VI_desc: "§Y当超过最终解决的限度、德国成立欧洲合众国或放弃民主道路时，这个国家精神就会被移除。§!"
- GER_harsh_breach_final_settlement_threat: "严重违反最终和解协议"
- GER_breach_final_settlement_threat: "违反最终和解协议"
+ GER_Idea_Heeresflieger_VI_desc: "§Y当超过\"最终解决条约\"的限度、德国成立欧洲合众国或放弃民主道路时，这个国家精神就会被移除。§!"
+ GER_harsh_breach_final_settlement_threat: "严重违反最终解决条约"
+ GER_breach_final_settlement_threat: "违反最终解决条约"
  GER_breach_of_contract_opinion_I: "暂停最终结算限额"
  GER_breach_of_contract_opinion_II: "暂停最终结算限额"
  GER_New_school_navy: "绿水学派"
@@ -2878,7 +2878,7 @@
  CAT_awacs: "预警机"
  CAT_atk_heli: "攻击直升机"
  CAT_heli: "直升机"
- germany.562.t: "最终结算合同提醒"
+ germany.562.t: "最终解决德国问题条约提示"
  germany.562.d: "我们正在接近德国联邦国防军最大兵力的上限，正如统一期间制定的§Y德国遗产§!中所述。如果我们坚持进行军事扩张，就必须预见到它将不可避免地升级为严重的国际紧张局势。"
  germany.562.a: "记下了"
  germany.563.t: "我们的邻国和条约伙伴已经召见了我们的大使。"
