--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -48,7 +48,7 @@
  SUB_no_lgbt: "LGBT人群没有权利"
  SUB_no_lgbt_desc: "我们不会允许LGBT人群在我们的共和国蔓延。"
  SUB_zavods: "我们需要更多工厂"
- SUB_zavods_desc: "我们的共和国需要更多的生产设施。"
+ SUB_zavods_desc: "我们的共和国需要更多的民用工业来真正帮助我们的共和国成为一个新的经济强国。"
  SUB_cooperate_rjd: "与俄罗斯铁路的整合"
  SUB_cooperate_rjd_desc: "我们已准备好全面融入俄罗斯铁路网。"
  SUB_min_obr: "教育部"
