--- a/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
@@ -221,9 +221,9 @@
  GEO_NATIONALIST: "民族主义"
  GEO_NATIONALIST_DESC: "格鲁吉亚将走民族主义道路。他们不会在乎西方和东方。他们最终将宣称大高加索国。"
  GEO_COMMUNISM: "共产主义"
- GEO_COMMUNISM_DESC: "格鲁吉亚将走共产主义道路。他们将恢复苏维埃共和国，并依靠游戏规则中的共产主义行为，他们要么接受ZSFSR，要么遵循自己的道路。"
+ GEO_COMMUNISM_DESC: "格鲁吉亚将走共产主义道路。他们将恢复苏维埃共和国，并依靠游戏规则中的共产主义行为，他们要么接受外高加索社会主义联邦苏维埃共和国，要么遵循自己的道路。"
  GEO_WILL_FOLLOW_OWN_WAY: "自己的道路"
- GEO_WILL_FOLLOW_OWN_WAY_DESC: "民族主义的格鲁吉亚将走自己的道路，并将粉碎亚美尼亚和阿塞拜疆"
+ GEO_WILL_FOLLOW_OWN_WAY_DESC: "民族主义的格鲁吉亚将走自己的道路，并将粉碎亚美尼亚和阿塞拜疆。"
  GEO_WILL_BE_PRO_ARMENIA: "亲亚美尼亚"
  GEO_WILL_BE_PRO_ARMENIA_DESC: "民族主义格鲁吉亚将帮助亚美尼亚粉碎阿塞拜疆"
  GEO_WILL_BE_PRO_AZERI: "亲阿塞拜疆"
@@ -316,7 +316,7 @@
  RULE_14_DAY_INFLUENCE: "14天冷却期"
  RULE_14_DAY_INFLUENCE_DESC: "投资影响行动的默认冷却时间为14天或两周。 这适用于国家所有可能的投资机会。"
  RULE_0_DAY_INFLUENCE: "无冷却期"
- RULE_0_DAY_INFLUENCE_DESC: "老派MD的影响力是通过投资期限获得的。您可以随意投资，同时仍能获得影响力，该项不推荐给那些喜欢平衡的人！"
+ RULE_0_DAY_INFLUENCE_DESC: "老派千禧黎明的影响力是通过投资期限获得的。您可以随意投资，同时仍能获得影响力，该项不推荐给那些喜欢平衡的人！"
  RULE_30_DAY_INFLUENCE: "30天冷却期"
  RULE_30_DAY_INFLUENCE_DESC: "建议的多人游戏选项。通过投资获得的影响力的冷却时间为30天或大约1个月。这适用于国家所有可能的投资机会。虽然你仍然可以投资，但在这段时间内你不会获得任何影响力。"
  RULE_ENABLE_DIVISION_LIMITER: "启用AI师数量限制器"
@@ -573,3 +573,13 @@
  RULE_PER_ZOROASTRIAN_STATE: "祆教复兴"
  RULE_PER_ZOROASTRIAN_STATE_ALLOWED_DESC: "在琐罗亚斯德教时期可能是一个可玩的派系"
  RULE_PER_ZOROASTRIAN_STATE_BLOCKED_DESC: "琐罗亚斯德教徒将不会产生"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_TICK: "启用月度§Y国家独立性§!增长刻度"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_TICK_NO_DESC: "禁用月度§Y国家独立性§!增长刻度"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_TICK_YES_DESC: "启用月度§Y国家独立性§!增长刻度。每个月§Y国家独立性§!将按照游戏规则“每月§Y国家独立性§!增长刻度”中设定的值增长，默认为每月0.10%。"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT: "月度§Y国家独立性§!增长刻度"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_05: "0.05%"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_05_DESC: "只要月度§Y国家独立性§!增长刻度选项启用，月度§Y国家独立性§!增长刻度为0.05%。"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_10: "0.10%"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_10_DESC: "只要月度§Y国家独立性§!增长刻度选项启用，月度§Y国家独立性§!增长刻度为0.10%。"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_15: "0.15%"
+ RULE_MONTHLY_DOMESTIC_INFLUENCE_GAIN_AMOUNT_15_DESC: "只要月度§Y国家独立性§!增长刻度选项启用，月度§Y国家独立性§!增长刻度为0.15%。"
