--- a/localisation/simp_chinese/focus_filter_tag_l_simp_chinese.yml
+++ b/localisation/simp_chinese/focus_filter_tag_l_simp_chinese.yml
@@ -5,7 +5,7 @@
  FOCUS_FILTER_MILITARY_LAWS: "军事法案"
  FOCUS_FILTER_MILITARY: "军事"
  FOCUS_FILTER_CORRUPTION: "腐败度"
- FOCUS_FILTER_CHI_AGGRESSION: "中国侵略"
+ FOCUS_FILTER_CHI_AGGRESSION: "中国侵略度"
  FOCUS_FILTER_INSURGENCY: "叛乱"
  FOCUS_FILTER_EQUIPMENT: "军事装备"
  FOCUS_FILTER_NATO: "北约"
